--- a/教學/sample/外期帳務範例.ipynb
+++ b/教學/sample/外期帳務範例.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E5%A4%96%E6%9C%9F%E5%B8%B3%E5%8B%99%E7%AF%84%E4%BE%8B.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "HImbuf--E6qi"
       },
       "source": [
@@ -39,7 +29,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "vGjcJZ1hhqIi",
+        "outputId": "3ba2f345-fd2f-4010-9fe4-f79ba15a9eee",
         "scrolled": true
       },
       "outputs": [],
@@ -61,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "fIht8njLKimp"
       },
@@ -92,7 +86,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "pA-GQgr7iIod"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pA-GQgr7iIod",
+        "outputId": "528455dd-da55-4d46-bd7f-06013f99105e"
       },
       "outputs": [],
       "source": [
@@ -115,7 +113,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yZxDgooGhqIj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yZxDgooGhqIj",
+        "outputId": "9608d14c-23ae-402f-bb8c-58aa0066780b"
       },
       "outputs": [],
       "source": [
@@ -142,7 +144,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Yxbg275XhqIk"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Yxbg275XhqIk",
+        "outputId": "6210a500-3e69-4273-8528-ce28c360d354"
       },
       "outputs": [],
       "source": [
@@ -175,7 +181,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "xEgbkXowJXKA"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 678
+        },
+        "id": "xEgbkXowJXKA",
+        "outputId": "7ec93443-1c90-4364-a07c-625d2a920d53"
       },
       "outputs": [],
       "source": [
@@ -246,14 +257,19 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XLAeSEGKJXKB"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 755
+        },
+        "id": "XLAeSEGKJXKB",
+        "outputId": "2199e9e9-d976-4599-80cc-89365bd19517"
       },
       "outputs": [],
       "source": [
         "# 初始數據\n",
         "reply_data=[[ '','','','','','','','','','','','','','','','','','','','','','','','','']]\n",
         "dd = pd.DataFrame(reply_data)\n",
-        "dd.columns = [ '客戶帳號', '交易所', '買賣別1', '交易種類1', '商品代號1', '商品年月1', '履約價1', '買賣權1', '未平倉量1', '結算價1', '及時價1', '未平倉損益1', '原始保證金1', '維持保證金1', '幣別1', '成交價1', '上手代號', '未平倉損益-約當台幣1', '手續費1', '營業稅1', '淨未平倉損益1', '淨未平倉損益-約當台幣1', '簡稱', '後台Pricebase', '顯示pricebase']\n",
+        "dd.columns = [ '客戶帳號', '交易所', '買賣別1', '交易種類1', '商品代號1', '商品年月1', '履約價1', '買賣權1', '未平倉量1', '結算價1', '即時價1', '未平倉損益1', '原始保證金1', '維持保證金1', '幣別1', '成交價1', '上手代號', '未平倉損益-約當台幣1', '手續費1', '營業稅1', '淨未平倉損益1', '淨未平倉損益-約當台幣1', '簡稱', '後台Pricebase', '顯示pricebase']\n",
         "#查詢未平倉\n",
         "query_reply_response = api.faccount.get_unliquidation(actno)\n",
         "if query_reply_response.ok == True:\n",
@@ -269,7 +285,7 @@
         "        dd.loc[i,'買賣權1']= data.buy_sell_option_1\n",
         "        dd.loc[i,'未平倉量1']= data.open_interest_1\n",
         "        dd.loc[i,'結算價1']= data.settlement_price_1\n",
-        "        dd.loc[i,'及時價1']= data.spot_price_1\n",
+        "        dd.loc[i,'即時價1']= data.spot_price_1\n",
         "        dd.loc[i,'未平倉損益1']= data.unrealized_pnl_1\n",
         "        dd.loc[i,'原始保證金1']= data.initial_margin_1\n",
         "        dd.loc[i,'維持保證金1']= data.maintenance_margin_1\n",
@@ -307,7 +323,12 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "to1axTHkJXKC"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 460
+        },
+        "id": "to1axTHkJXKC",
+        "outputId": "c5e24292-6575-4946-e93e-739f00e9d0ad"
       },
       "outputs": [],
       "source": [
@@ -368,7 +389,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "4bQ_uByMJXKC",
+        "outputId": "cee4d12b-babd-4f0c-e021-625607808877",
         "scrolled": true
       },
       "outputs": [],
@@ -383,7 +408,6 @@
   ],
   "metadata": {
     "colab": {
-      "include_colab_link": true,
       "provenance": [],
       "toc_visible": true
     },
