--- a/教學/sample/現貨行情範例.ipynb
+++ b/教學/sample/現貨行情範例.ipynb
@@ -108,7 +108,7 @@
         "head_base = dict(values=[\n",
         "    '股票代號', '商品名稱', '產業別', '證券別', '股票異常代碼', '參考價', '漲停價', '跌停價', '非10元面額', \n",
         "    '異常推介個股註記', '特殊異常證券註記', '可現股當沖註記', '豁免平盤下融券賣出註記', '豁免平盤下借券賣出註記', \n",
-        "    '搓合循環秒數', '外國股票識別碼', '交易單位', '交易幣別代號'\n",
+        "    '撮合循環秒數', '外國股票識別碼', '交易單位', '交易幣別代號'\n",
         "])  \n",
         "\n",
         "head_idx = dict(values=['指數代號','指數時間','最新指數'])\n",
@@ -219,9 +219,9 @@
         "#錯誤事件處理\n",
         "api.on_error = lambda error: print(f'api錯誤 {error}')\n",
         "#系統登入\n",
-        "loginresponse = api.login(\n",
-        "    \"url\", \"帳號\", \"密碼\", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼\n",
-        "\n",
+        "#loginresponse = api.login(\n",
+        "#    \"url\", \"帳號\", \"密碼\", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼\n",
+        "loginresponse = api.login( \"url\", \"帳號\", \"密碼\", '', '')\n",
         "\n",
         "#顯示登入結果\n",
         "print(loginresponse)\n",
@@ -404,7 +404,7 @@
         "    cur[col_base['可現股當沖註記']] = tickdatahighlow.day_trading_note\n",
         "    cur[col_base['豁免平盤下融券賣出註記']] = tickdatahighlow.exempt_short_selling_note\n",
         "    cur[col_base['豁免平盤下借券賣出註記']] = tickdatahighlow.exempt_borrowing_short_selling_note\n",
-        "    cur[col_base['搓合循環秒數']] = tickdatahighlow.matching_cycle_seconds\n",
+        "    cur[col_base['撮合循環秒數']] = tickdatahighlow.matching_cycle_seconds\n",
         "    cur[col_base['外國股票識別碼']] = tickdatahighlow.foreign_stock_identifier\n",
         "    cur[col_base['交易單位']] = tickdatahighlow.trading_unit\n",
         "    cur[col_base['交易幣別代號']] = tickdatahighlow.trading_currency_code \n",
@@ -550,7 +550,7 @@
         "    cur[col_base['可現股當沖註記']] = tickdatahighlow.day_trading_note\n",
         "    cur[col_base['豁免平盤下融券賣出註記']] = tickdatahighlow.exempt_short_selling_note\n",
         "    cur[col_base['豁免平盤下借券賣出註記']] = tickdatahighlow.exempt_borrowing_short_selling_note\n",
-        "    cur[col_base['搓合循環秒數']] = tickdatahighlow.matching_cycle_seconds \n",
+        "    cur[col_base['撮合循環秒數']] = tickdatahighlow.matching_cycle_seconds \n",
         "    cur[col_base['交易單位']] = tickdatahighlow.trading_unit\n",
         "    cur[col_base['交易幣別代號']] = tickdatahighlow.trading_currency_code \n",
         "\n",
@@ -740,7 +740,7 @@
         "    cur[col_base['可現股當沖註記']] = tickdatahighlow.day_trading_note\n",
         "    cur[col_base['豁免平盤下融券賣出註記']] = tickdatahighlow.exempt_short_selling_note\n",
         "    cur[col_base['豁免平盤下借券賣出註記']] = tickdatahighlow.exempt_borrowing_short_selling_note\n",
-        "    cur[col_base['搓合循環秒數']] = tickdatahighlow.matching_cycle_seconds \n",
+        "    cur[col_base['撮合循環秒數']] = tickdatahighlow.matching_cycle_seconds \n",
         "    cur[col_base['交易單位']] = tickdatahighlow.trading_unit\n",
         "    cur[col_base['交易幣別代號']] = tickdatahighlow.trading_currency_code \n",
         "\n",
@@ -880,7 +880,7 @@
         "    cur[col_base['可現股當沖註記']] = tickdatahighlow.day_trading_note\n",
         "    cur[col_base['豁免平盤下融券賣出註記']] = tickdatahighlow.exempt_short_selling_note\n",
         "    cur[col_base['豁免平盤下借券賣出註記']] = tickdatahighlow.exempt_borrowing_short_selling_note\n",
-        "    cur[col_base['搓合循環秒數']] = tickdatahighlow.matching_cycle_seconds\n",
+        "    cur[col_base['撮合循環秒數']] = tickdatahighlow.matching_cycle_seconds\n",
         "    cur[col_base['外國股票識別碼']] = tickdatahighlow.foreign_stock_identifier\n",
         "    cur[col_base['交易單位']] = tickdatahighlow.trading_unit\n",
         "    cur[col_base['交易幣別代號']] = tickdatahighlow.trading_currency_code \n",
