--- a/教學/內期行情.md
+++ b/教學/內期行情.md
@@ -15,211 +15,271 @@ https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%A
 
 > <a href="../sample/內期行情範例.ipynb" download>下載範例</a>
 
-## 查詢成交價
+
+# <strong>查詢行情</strong> 
+### <strong>成交價量</strong>  
+透過dquote.[query_tick_data_trade]({{ "/API/dquote#query_tick_data_trade" | relative_url }})方法實作,帶入商品代碼  
+回傳物件為[DTickDataTradeResponse]({{ "/API/dquote/#回傳值-dtickdatatraderesponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[DTickDataTrade]({{ "/API/dquote_data/#dtickdatatrade-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
 
 ```python
-#查詢成交和最佳買賣價接收範例  
-productid='TXFI4'#商品代碼
-if loginresponse.ok == True:  
-    display(fig)
-    display(fig2)
-     #查詢開盤價量       
-    tickdataopenResponse=api.dquote.query_tick_data_open(productid)
-    if tickdataopenResponse.ok == True:
-        tickdataopen=tickdataopenResponse.data
-        cur = list(fig2.data[0].cells.values)  
-        cur[col2_idx['開盤時間']] = tickdataopen.opentime        
-        cur[col2_idx['開盤價']] = tickdataopen.openprice
-        cur[col2_idx['開盤量'] ]= tickdataopen.openquantity 
-        with fig.batch_update():
-            fig2.data[0].cells.values = cur      
-    else:
-        print("tickdataopen "+tickdataopenResponse.error)    
-    #查詢成交價量 
-    tickDataTradeResponse=api.dquote.query_tick_data_trade(productid)
-    if tickDataTradeResponse.ok == True:
-        tickdatatrade=tickDataTradeResponse.data
-        cur = list(fig.data[0].cells.values)  
-        cur[col_idx['成交時間']] = tickdatatrade.matchtime 
-        cur[col_idx['成交價']] = tickdatatrade.matchprice
-        cur[col_idx['成交量']] = tickdatatrade.matchquantity 
-        with fig.batch_update():
-            fig.data[0].cells.values = cur 
-    else:
-        print("tickdatatrade "+tickDataTradeResponse.error)
-    #查詢最高最低價
-    tickDataHignLowResponse=api.dquote.query_tick_data_high_low(productid)
-    if tickDataHignLowResponse.ok == True:
-        tickdatahighlow=tickDataHignLowResponse.data
-        cur = list(fig2.data[0].cells.values) 
-        cur[col2_idx['最高']] = tickdatahighlow.dayhighprice
-        cur[col2_idx['最低']] = tickdatahighlow.daylowprice
-        cur[col2_idx['最高低價時間']] = tickdatahighlow.showtime  
-        with fig.batch_update():
-            fig2.data[0].cells.values = cur       
-    else:
-        print("tickdatahighlow "+tickDataTradeResponse.error)        
-    #查詢最佳買賣價量
-    tickDataBeforeBidOfferResponse=api.dquote.query_tick_data_bid_offer(productid)
-    if tickDataBeforeBidOfferResponse.ok == True:
-        tickdatabidoffer=tickDataBeforeBidOfferResponse.data
-        cur = list(fig.data[0].cells.values) 
-        cur[col_idx['買價1']] = tickdatabidoffer.bp1
-        cur[col_idx['買量1']] = tickdatabidoffer.bq1
-        cur[col_idx['買價2']] = tickdatabidoffer.bp2
-        cur[col_idx['買量2']] = tickdatabidoffer.bq2
-        cur[col_idx['買價3']] = tickdatabidoffer.bp3
-        cur[col_idx['買量3']] = tickdatabidoffer.bq3 
-        cur[col_idx['買價4']] = tickdatabidoffer.bp4
-        cur[col_idx['買量4']] = tickdatabidoffer.bq4
-        cur[col_idx['買價5']] = tickdatabidoffer.bp5
-        cur[col_idx['買量5']] = tickdatabidoffer.bq5     
-        cur[col_idx['賣價1']] = tickdatabidoffer.sp1
-        cur[col_idx['賣量1']] = tickdatabidoffer.sq1              
-        cur[col_idx['賣價2']] = tickdatabidoffer.sp2
-        cur[col_idx['賣量2']] = tickdatabidoffer.sq2    
-        cur[col_idx['賣價3']] = tickdatabidoffer.sp3
-        cur[col_idx['賣量3']] = tickdatabidoffer.sq3    
-        cur[col_idx['賣價4']] = tickdatabidoffer.sp4
-        cur[col_idx['賣量4']] = tickdatabidoffer.sq4                
-        cur[col_idx['賣價5']] = tickdatabidoffer.sp5
-        cur[col_idx['賣量5']] = tickdatabidoffer.sq5        
-        with fig.batch_update():
-            fig.data[0].cells.values = cur
-    else:
-        print("tickdatabidoffer "+tickDataBeforeBidOfferResponse.error)
-   
-  
-```
-## 註冊成交和最佳買賣價接收
+tickDataTradeResponse=unitrade.dquote.query_tick_data_trade('TXFG5')
+#單筆成交價範例:
+# DTickDataTradeResponse(ok=True, error='', data=DTickDataTrade(
+# commodityid='TXFG5',\\商品代號
+# infotime='132333276000',\\成交時間
+# matchprice=21699.0,\\第一成交價
+# matchquantity=2,\\第一成交量
+# matchtotalqty=45901,\\成交總量 
+# matchbuycnt=31986,\\成交買量
+# matchsellcnt=30551,\\成交賣量
+# matchtime='132333178000',\\成交時間
+# matchpricedata=[],\\第2到第N成交價陣列
+# matchqtydata=[]\\第2到第N成交量陣列
+#))
+#多筆成交價範例:
+# DTickDataTradeResponse(ok=True, error='', data=DTickDataTrade(
+# commodityid='TXFG5',\\商品代號
+# infotime='133333276000',\\成交時間
+# matchprice=21699.0,\\第一成交價
+# matchquantity=2,\\第一成交量
+# matchtotalqty=45901,\\成交總量 
+# matchbuycnt=31986,\\成交買量
+# matchsellcnt=30551,\\成交賣量
+# matchtime='132333178000',\\成交時間
+# matchpricedata=[21698.0,21699.0],\\第2到第N成交價陣列
+# matchqtydata=[1,2]\\第2到第N成交量陣列
+#))
+``` 
+## <strong>最佳買賣價量</strong>  
+透過dquote.[query_tick_data_bid_offer]({{ "/API/dquote#query_tick_data_bid_offer" | relative_url }})方法實作,帶入商品代碼  
+回傳物件為[DTickDataBidOfferResponse]({{ "/API/dquote/#回傳值-dtickdatabidofferresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[DTickDataBidOffer]({{ "/API/dquote_data/#dtickdatabidoffer-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
 
 ```python
-#訂閱成交和最佳買賣價接收範例
-productid='TXFG4'#商品代碼
-#開盤價量接收處理
-def on_tick_data_open(tickdataopen: DTickDataOpen):  
-    cur = list(fig2.data[0].cells.values) 
-    cur[col_idx['開盤時間']] = tickdataopen.opentime
-    cur[col_idx['開盤價']] = tickdataopen.openprice
-    cur[col_idx['開盤量'] ]= tickdataopen.openquantity 
-    with fig2.batch_update():
-        fig2.data[0].cells.values = cur 
-#成交價量接收處理        
-def on_tick_data_trade(tickdatatrade: DTickDataTrade):  
-    cur = list(fig.data[0].cells.values)  
-    cur[col_idx['成交時間']] = tickdatatrade.matchtime 
-    cur[col_idx['成交價']] = tickdatatrade.matchprice
-    cur[col_idx['成交量']] = tickdatatrade.matchquantity 
-    with fig.batch_update():
-        fig.data[0].cells.values = cur 
-#最高最低價接收處理        
-def on_tick_data_high_low(tickdatahighlow: DTickDataHighLow):    
-    cur = list(fig2.data[0].cells.values) 
-    cur[col_idx['最高']] = tickdatahighlow.dayhighprice
-    cur[col_idx['最低']] = tickdatahighlow.daylowprice
-    cur[col_idx['最高低價時間']] = tickdatahighlow.showtime  
-    with fig2.batch_update():
-        fig2.data[0].cells.values = cur  
-#最佳買賣價量接收處理            
-def on_tick_data_bid_offer(tickdatabidoffer: DTickDataBidOffer):  
-    cur = list(fig.data[0].cells.values) 
-    cur[col_idx['買價1']] = tickdatabidoffer.bp1
-    cur[col_idx['買量1']] = tickdatabidoffer.bq1
-    cur[col_idx['買價2']] = tickdatabidoffer.bp2
-    cur[col_idx['買量2']] = tickdatabidoffer.bq2
-    cur[col_idx['買價3']] = tickdatabidoffer.bp3
-    cur[col_idx['買量3']] = tickdatabidoffer.bq3 
-    cur[col_idx['買價4']] = tickdatabidoffer.bp4
-    cur[col_idx['買量4']] = tickdatabidoffer.bq4
-    cur[col_idx['買價5']] = tickdatabidoffer.bp5
-    cur[col_idx['買量5']] = tickdatabidoffer.bq5     
-    cur[col_idx['賣價1']] = tickdatabidoffer.sp1
-    cur[col_idx['賣量1']] = tickdatabidoffer.sq1              
-    cur[col_idx['賣價2']] = tickdatabidoffer.sp2
-    cur[col_idx['賣量2']] = tickdatabidoffer.sq2    
-    cur[col_idx['賣價3']] = tickdatabidoffer.sp3
-    cur[col_idx['賣量3']] = tickdatabidoffer.sq3    
-    cur[col_idx['賣價4']] = tickdatabidoffer.sp4
-    cur[col_idx['賣量4']] = tickdatabidoffer.sq4                
-    cur[col_idx['賣價5']] = tickdatabidoffer.sp5
-    cur[col_idx['賣量5']] = tickdatabidoffer.sq5        
-    with fig.batch_update():
-        fig.data[0].cells.values = cur
+tickDataBeforeBidOfferResponse=unitrade.dquote.query_tick_data_bid_offer('TXFG5')
+# DTickDataBidOfferResponse(ok=True, error='', data=DTickDataBidOffer(
+# commodityid='TXFG5',\\商品代號
+# bp1=21704.0,\\第一檔委買價格
+# bp2=21703.0,\\第二檔委買價格
+# bp3=21702.0,\\第三檔委買價格
+# bp4=21701.0,\\第四檔委買價格
+# bp5=21700.0,\\第五檔委買價格
+# bq1=5,\\第一檔委買數量
+# bq2=3,\\第二檔委買數量
+# bq3=7,\\第三檔委買數量
+# bq4=3,\\第四檔委買數量
+# bq5=5,\\第五檔委買數量
+# sp1=21706.0,\\第一檔委賣價格
+# sp2=21708.0,\\第二檔委賣價格
+# sp3=21709.0,\\第三檔委賣價格
+# sp4=21710.0,\\第四檔委賣價格
+# sp5=21711.0,\\第五檔委賣價格
+# sq1=4,\\第一檔委買數量
+# sq2=1,\\第二檔委賣數量
+# sq3=3,\\第三檔委賣數量
+# sq4=12,\\第四檔委賣數
+# sq5=16\\第五檔委賣數量
+#)) 
+``` 
+## <strong>開盤價價量</strong>  
+透過dquote.[query_tick_data_open]({{ "/API/dquote#query_tick_data_open" | relative_url }})方法實作,帶入商品代碼  
+回傳物件為[DTickDataOpenResponse]({{ "/API/dquote/#回傳值-dtickdataopenresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[DTickDataOpen]({{ "/API/dquote_data/#dtickdataopen-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+```python
+tickdataopenResponse=unitrade.dquote.query_tick_data_open('TXFG5')
+# DTickDataOpenResponse(ok=True, error='', data=DTickDataOpen(
+# commodityid='TXFG5',\\商品代碼
+# opentime='084500060000',\\開盤時間
+# openprice=21820.0,\\開盤價
+# openquantity=159\\開盤量
+#))
+``` 
+## <strong>最高最低價</strong>  
+透過dquote.[query_tick_data_high_low]({{ "/API/dquote#query_tick_data_high_low" | relative_url }})方法實作,帶入商品代碼   
+回傳物件為[DTickDataHighLowResponse]({{ "/API/dquote/#回傳值-dtickdatahighlowresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[DTickDataHighLow]({{ "/API/dquote_data/#dtickdatahighlow-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+```python
+tickDataHignLowResponse=unitrade.dquote.query_tick_data_high_low('TXFG5')
+# DTickDataHighLowResponse(ok=True, error='', data=DTickDataHighLow(
+# commodityid='TXFG5',\\商品代碼
+# showtime='105141451000',\\時間
+# dayhighprice=21857.0,\\最高價
+# daylowprice=21675.0\\最低價
+#)) 
+``` 
+## <strong>現貨價量</strong>  
+透過dquote.[query_index_data]({{ "/API/dquote#query_index_data" | relative_url }})方法實作,帶入商品代碼  
+回傳物件為[DIndexDataResponse]({{ "/API/dquote/#回傳值-dindexdataresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[DIndexData]({{ "/API/dquote_data/#dindexdata-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+```python
+#查詢現貨價量範例 
+indexdataResponse=unitrade.dquote.query_index_data('TXF')
+# DIndexDataResponse(ok=True, error='', data=DIndexData(
+# index_kind='TXF',\\現貨代碼
+# index_time='133325000000',\\現貨統計時間
+# index_value=22003.5\\現貨價
+#)) 
+``` 
+# <strong>接收即時行情</strong>  
+## <strong>*成交和最佳買賣價*</strong> 
+### <strong>*註冊*</strong> 
+dquote.[on_tick_data_trade]({{ "/API/dquote#on_tick_data_trade" | relative_url }})事件接收即時成交價   
+dquote.[on_tick_data_bid_offer]({{ "/API/dquote#on_tick_data_bid_offer" | relative_url }})事件接收最佳五檔  
+dquote.[subscribe_trade_bid_offer]({{ "/API/dquote#subscribe_trade_bid_offer" | relative_url }})方法可以註冊接收即時行情傳入商品代碼  
+
+```python
 #訂閱接收事件
-api.dquote.on_tick_data_open = on_tick_data_open  
-api.dquote.on_tick_data_high_low = on_tick_data_high_low    
-api.dquote.on_tick_data_trade = on_tick_data_trade
-api.dquote.on_tick_data_bid_offer = on_tick_data_bid_offer   
-if loginresponse.ok == True:       
-    subok,msg=api.dquote.subscribe_trade_bid_offer(productid)
-    print(f'註冊成交買賣價量 {productid} {subok} {msg}')
-    subok,msg=api.dquote.subscribe_high_low(productid)
-    print(f'註冊最高最低價 {productid} {subok} {msg}')
-    subok,msg=api.dquote.subscribe_open(productid)
-    print(f'註冊開收盤價 {productid} {subok} {msg}')    
-    display(fig)
-    display(fig2)
-else:
-    print(loginresponse.error)  
-```
-##反註冊成交和最佳買賣價接收
+unitrade.dquote.on_tick_data_trade = on_tick_data_trade
+unitrade.dquote.on_tick_data_bid_offer = on_tick_data_bid_offer
+#訂閱時帶商品代碼
+subok,msg=unitrade.dquote.subscribe_trade_bid_offer('TXFG5')
+print(f'註冊結果 {subok} {msg}') 
+``` 
+```python 
+#成交價量接收處理
+def on_tick_data_trade(tickdatatrade: DTickDataTrade):
+    print(tickdatatrade)
+    #DTickDataTrade(
+    # commodityid='TXFG5',\\商品代號
+    # infotime='132333276000',\\成交時間
+    # matchprice=21699.0,\\第一成交價
+    # matchquantity=2,\\第一成交量
+    # matchtotalqty=45901,\\成交總量 
+    # matchbuycnt=31986,\\成交買量
+    # matchsellcnt=30551,\\成交賣量
+    # matchtime='132333178000',\\成交時間
+    # matchpricedata=[],\\第2到第N成交價陣列
+    # matchqtydata=[]\\第2到第N成交量陣列
+    #)
+#最佳買賣價量接收處理
+def on_tick_data_bid_offer(tickdatabidoffer: DTickDataBidOffer):
+    print(tickdatabidoffer)
+    #DTickDataBidOffer(
+    # commodityid='TXFG5',\\商品代號
+    # bp1=21704.0,\\第一檔委買價格
+    # bp2=21703.0,\\第二檔委買價格
+    # bp3=21702.0,\\第三檔委買價格
+    # bp4=21701.0,\\第四檔委買價格
+    # bp5=21700.0,\\第五檔委買價格
+    # bq1=5,\\第一檔委買數量
+    # bq2=3,\\第二檔委買數量
+    # bq3=7,\\第三檔委買數量
+    # bq4=3,\\第四檔委買數量
+    # bq5=5,\\第五檔委買數量
+    # sp1=21706.0,\\第一檔委賣價格
+    # sp2=21708.0,\\第二檔委賣價格
+    # sp3=21709.0,\\第三檔委賣價格
+    # sp4=21710.0,\\第四檔委賣價格
+    # sp5=21711.0,\\第五檔委賣價格
+    # sq1=4,\\第一檔委買數量
+    # sq2=1,\\第二檔委賣數量
+    # sq3=3,\\第三檔委賣數量
+    # sq4=12,\\第四檔委賣數
+    # sq5=16\\第五檔委賣數量
+    #)
+``` 
+### <strong>反註冊</strong> 
+dquote.[unsubscribe_trade_bid_offer]({{ "/API/dquote#unsubscribe_trade_bid_offer" | relative_url }})方法可以反註冊停止接收即時行情,傳入商品代碼 
+```python
+unsub_ok,msg=unitrade.dquote.unsubscribe_trade_bid_offer('TXFA5')
+print(f'反註冊結果  {unsub_ok} {msg}')
+``` 
+## <strong>*開盤價量*</strong> 
+### <strong>*註冊*</strong> 
+dquote.[on_tick_data_open]({{ "/API/dquote#on_tick_data_open" | relative_url }})事件接收開盤價量  
+dquote.[subscribe_open]({{ "/API/dquote#subscribe_open" | relative_url }})方法可以註冊接收開盤價量傳入商品代碼  
+
+```python 
+#訂閱接收事件
+unitrade.dquote.on_tick_data_open = on_tick_data_open
+#訂閱時帶商品代碼
+subok,msg=unitrade.dquote.subscribe_open('TXFG5')
+print(f'註冊結果 {productid} {subok} {msg}') 
+``` 
+```python
+#開盤價量接收處理
+def on_tick_data_open(tickdataopen: DTickDataOpen):
+    print(tickdataopen) 
+    #DTickDataOpen(
+    # commodityid='TXFG5',\\商品代碼
+    # opentime='084500060000',\\開盤時間
+    # openprice=21820.0,\\開盤價
+    # openquantity=159\\開盤量
+    #)
+```     
+### <strong>*反註冊*</strong> 
+dquote.[unsubscribe_open]({{ "/API/dquote#unsubscribe_open" | relative_url }})方法可以反註冊停止接收開盤價量,傳入商品代碼 
+```python 
+unsub_ok,msg=unitrade.dquote.unsubscribe_open(productid)
+print(f'反註冊結果 {productid} {unsub_ok} {msg}') 
+``` 
+## <strong>*最高最低價量*</strong> 
+### <strong>*註冊*</strong> 
+dquote.[on_tick_data_high_low]({{ "/API/dquote#on_tick_data_high_low" | relative_url }})事件接收最高最低價    
+dquote.[subscribe_high_low]({{ "/API/dquote#subscribe_high_low" | relative_url }})方法可以註冊接收最高最低價傳入商品代碼  
 
 ```python
-#反註冊報價
-unsub_ok,msg=api.dquote.unsubscribe_trade_bid_offer(productid)
-print(f'反註冊成交買賣價量 {productid} {unsub_ok} {msg}')
-unsub_ok,msg=api.dquote.unsubscribe_high_low(productid)
-print(f'反註冊最高最低價 {productid} {unsub_ok} {msg}')
-unsub_ok,msg=api.dquote.unsubscribe_open(productid)
-print(f'反註冊開收盤價 {productid} {unsub_ok} {msg}')
-```
-## 查詢現貨價
-
+#訂閱接收事件
+unitrade.dquote.on_tick_data_high_low = on_tick_data_high_low
+#訂閱時帶商品代碼
+subok,msg=unitrade.dquote.subscribe_high_low('TXFG5')
+print(f'註冊結果 {productid} {subok} {msg}') 
+``` 
 ```python
-#查詢現貨價範例
-index_id='TXF'#代碼
-display(fig3)
-if loginresponse.ok == True:  
-     #查詢       
-    indexdataResponse=api.dquote.query_index_data(index_id)
-    if indexdataResponse.ok == True:
-        indexdata=indexdataResponse.data 
-        cur = list(fig3.data[0].cells.values) 
-        cur[col3_idx['現貨統計時間']] = indexdata.index_time        
-        cur[col3_idx['現貨價格']] = indexdata.index_value 
-        with fig3.batch_update():
-            fig3.data[0].cells.values = cur        
-    else:
-        print(indexdataResponse.error)     
-```
-
-## 訂閱現貨價量接收
+#最高最低價接收處理
+def on_tick_data_high_low(tickdatahighlow: DTickDataHighLow):
+    print(tickdatahighlow)  
+    #DTickDataHighLow(
+    # commodityid='TXFG5',\\商品代碼
+    # showtime='105141451000',\\時間
+    # dayhighprice=21857.0,\\最高價
+    # daylowprice=21675.0\\最低價
+    #) 
+```    
+### <strong>*反註冊*</strong> 
+dquote.[unsubscribe_high_low]({{ "/API/dquote#unsubscribe_high_low" | relative_url }})方法可以反註冊停止接收最高最低價,傳入商品代碼 
 ```python
-#訂閱現貨價量接收範例
-index_id='TXF' #代碼
+unsub_ok,msg=unitrade.dquote.unsubscribe_high_low(productid)
+print(f'反註冊結果 {productid} {unsub_ok} {msg}')
+``` 
+## <strong>*現貨報價*</strong> 
+### <strong>*註冊*</strong> 
+dquote.[on_index_data]({{ "/API/dquote#on_index_data" | relative_url }})事件接收現貨價量    
+dquote.[subscribe_index_data]({{ "/API/dquote#subscribe_index_data" | relative_url }})方法可以註冊接收現貨價量傳入商品代碼  
+
+```python 
+#訂閱事件
+unitrade.dquote.on_index_data = on_index_data
+#註冊報價
+subok,msg=unitrade.dquote.subscribe_index_data('1','TXF')
+print(f'註冊結果 {index_id} {subok} {msg}')
+``` 
+```python
 #接收現貨價量處理
-def on_index_data(indexdata: DIndexData): 
-    cur = list(fig3.data[0].cells.values) 
-    cur[col3_idx['現貨統計時間']] = indexdata.index_time        
-    cur[col3_idx['現貨價格']] = indexdata.index_value 
-    with fig3.batch_update():
-        fig3.data[0].cells.values = cur   
-#訂閱事件                 
-api.dquote.on_index_data = on_index_data  
-if loginresponse.ok == True:      
-    #註冊報價        
-    subok,msg=api.dquote.subscribe_index_data('1',index_id) 
-    print(f'註冊現貨價量 {index_id} {subok} {msg}')
-    display(fig3)
-else:
-    print(loginresponse.error) 
-```
-## 反註冊現貨價接收
-
+def on_index_data(indexdata: DIndexData):
+    print(indexdata) 
+    # DIndexData(
+    # index_kind='TXF',\\現貨代碼
+    # index_time='133325000000',\\現貨統計時間
+    # index_value=22003.5\\現貨價
+    #) 
+```     
+### <strong>*反註冊*</strong> 
+dquote.[unsubscribe_index_data]({{ "/API/dquote#unsubscribe_index_data" | relative_url }})方法可以反註冊停止接收現貨價量,傳入商品代碼 
 ```python
-#反註冊現貨價接收
-unsub_ok,msg=api.dquote.unsubscribe_indexdata('1',index_id)
-print(f'反註冊現貨價量 {index_id} {unsub_ok} {msg}')
-```
- 
- 
+#反註冊現貨價量接收
+unsub_ok,msg=unitrade.dquote.unsubscribe_index_data('1',index_id)
+print(f'反註冊結果 {index_id} {unsub_ok} {msg}')
+```  
+
+
