--- a/教學/外期行情.md
+++ b/教學/外期行情.md
@@ -15,282 +15,360 @@ https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%A
 
 > <a href="../sample/外期行情範例.ipynb" download>下載範例</a> 
 
-## 查詢成交和最佳買賣價
-透過 `fquote` 物件中的 [query_tick_data_trade]({{ "/API/fquote#query_tick_data_trade" | relative_url }}) 方法查詢最後成交價。 
-
-透過 `fquote` 物件中的 [query_tick_data_bid]({{ "/API/fquote#query_tick_data_trade" | relative_url }}) 方法查詢最後最佳買價。 
-
-透過 `fquote` 物件中的 [query_tick_data_offer]({{ "/API/fquote#query_tick_data_trade" | relative_url }}) 方法查詢最後最佳賣價。 
-
-
+## 查詢成交價
+透過fquote.[query_tick_data_trade]({{ "/API/fquote#query_tick_data_trade" | relative_url }})方法實作,帶入商品   
+回傳物件為[FTickDataTradeResponse]({{ "/API/fquote/#回傳值-ftickdatatraderesponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[FTickDataTrade]({{ "/API/fquote_data/#ftickdatatrade-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+ 
 ```python
 #查詢成交和最佳買賣價範例
-productid='CME|NQ|202409|F|' #商品代碼
-if loginresponse.ok == True:  
-    display(fig)           
-    display(fig2)
-    display(fig3)
-    #查詢成交價量
-    tickDataTradeResponse=api.fquote.query_tick_data_trade(exchange= productid.split('|')[0], symbol= productid.split('|')[1], ym=productid.split('|')[2], cp= productid.split('|')[3], strike=productid.split('|')[4] )
-    if tickDataTradeResponse.ok == True: 
-        tickdatatrade=tickDataTradeResponse.data
-        cur = list(fig.data[0].cells.values)  
-        cur[col_idx['成交時間']] =tickdatatrade.time   
-        cur[col_idx['成交價']] = tickdatatrade.lastprice 
-        cur[col_idx['成交量'] ]= tickdatatrade.lastvolume
-        with fig.batch_update():
-            fig.data[0].cells.values = cur            
-    else:
-        print('tickDataTradeResponse '+tickDataTradeResponse.error)
-    #查詢最佳買價
-    tickDataBidResponse=api.fquote.query_tick_data_bid(exchange= productid.split('|')[0], symbol= productid.split('|')[1], ym=productid.split('|')[2], cp= productid.split('|')[3], strike=productid.split('|')[4] )
-    if tickDataBidResponse.ok == True:
-        tickdatabid=tickDataBidResponse.data
-        cur = list(fig2.data[0].cells.values)  
-        cur[col2_idx['買價1']] =tickdatabid.BidDOM1Price 
-        cur[col2_idx['買量1']] =tickdatabid.BidDOM1Volume    
-        cur[col2_idx['買價2']] =tickdatabid.BidDOM2Price 
-        cur[col2_idx['買量2']] =tickdatabid.BidDOM2Volume    
-        cur[col2_idx['買價3']] =tickdatabid.BidDOM3Price 
-        cur[col2_idx['買量3']] =tickdatabid.BidDOM3Volume    
-        cur[col2_idx['買價4']] =tickdatabid.BidDOM4Price 
-        cur[col2_idx['買量4']] =tickdatabid.BidDOM4Volume    
-        cur[col2_idx['買價5']] =tickdatabid.BidDOM5Price 
-        cur[col2_idx['買量5']] =tickdatabid.BidDOM5Volume                 
-        cur[col2_idx['買價6']] =tickdatabid.BidDOM6Price 
-        cur[col2_idx['買量6']] =tickdatabid.BidDOM6Volume   
-        cur[col2_idx['買價7']] =tickdatabid.BidDOM7Price 
-        cur[col2_idx['買量7']] =tickdatabid.BidDOM7Volume   
-        cur[col2_idx['買價8']] =tickdatabid.BidDOM8Price 
-        cur[col2_idx['買量8']] =tickdatabid.BidDOM8Volume   
-        cur[col2_idx['買價9']] =tickdatabid.BidDOM9Price 
-        cur[col2_idx['買量9']] =tickdatabid.BidDOM9Volume   
-        cur[col2_idx['買價10']] =tickdatabid.BidDOM10Price 
-        cur[col2_idx['買量10']] =tickdatabid.BidDOM10Volume                                                              
-        with fig2.batch_update():
-            fig2.data[0].cells.values = cur    
-    else:
-        print('tickDataBidResponse '+tickDataBidResponse.error)
-    #查詢最佳賣價
-    tickDataOfferResponse=api.fquote.query_tick_data_offer(exchange= productid.split('|')[0], symbol= productid.split('|')[1], ym=productid.split('|')[2], cp= productid.split('|')[3], strike=productid.split('|')[4] )
-    if tickDataOfferResponse.ok == True:
-        tickdataOffer=tickDataOfferResponse.data
-        cur = list(fig3.data[0].cells.values)  
-        cur[col3_idx['賣價1']] =tickdataOffer.OfferDOM1Price 
-        cur[col3_idx['賣量1']] =tickdataOffer.OfferDOM1Volume    
-        cur[col3_idx['賣價2']] =tickdataOffer.OfferDOM2Price 
-        cur[col3_idx['賣量2']] =tickdataOffer.OfferDOM2Volume    
-        cur[col3_idx['賣價3']] =tickdataOffer.OfferDOM3Price 
-        cur[col3_idx['賣量3']] =tickdataOffer.OfferDOM3Volume    
-        cur[col3_idx['賣價4']] =tickdataOffer.OfferDOM4Price 
-        cur[col3_idx['賣量4']] =tickdataOffer.OfferDOM4Volume    
-        cur[col3_idx['賣價5']] =tickdataOffer.OfferDOM5Price 
-        cur[col3_idx['賣量5']] =tickdataOffer.OfferDOM5Volume                 
-        cur[col3_idx['賣價6']] =tickdataOffer.OfferDOM6Price 
-        cur[col3_idx['賣量6']] =tickdataOffer.OfferDOM6Volume   
-        cur[col3_idx['賣價7']] =tickdataOffer.OfferDOM7Price 
-        cur[col3_idx['賣量7']] =tickdataOffer.OfferDOM7Volume   
-        cur[col3_idx['賣價8']] =tickdataOffer.OfferDOM8Price 
-        cur[col3_idx['賣量8']] =tickdataOffer.OfferDOM8Volume   
-        cur[col3_idx['賣價9']] =tickdataOffer.OfferDOM9Price 
-        cur[col3_idx['賣量9']] =tickdataOffer.OfferDOM9Volume   
-        cur[col3_idx['賣價10']] =tickdataOffer.OfferDOM10Price 
-        cur[col3_idx['賣量10']] =tickdataOffer.OfferDOM10Volume                                                              
-        with fig3.batch_update():
-            fig3.data[0].cells.values = cur             
-    else:
-        print('tickDataOfferResponse '+tickDataOfferResponse.error)  
-```
-## 訂閱成交和最佳買賣價接收
+#查詢最後成交價量
+response = unitrade.fquote.query_tick_data_trade("CME", "NQ", "202509", "", "F"))
+# FTickDataTradeResponse(ok=True, error='', data=FTickDataTrade(
+# exchage='CME',//交易所
+# symbol='NQ',//商品代號
+# ym='202509',//年月
+# cp='F',//CP
+# strike='',//履約價
+# display_denominator=1.0,//分母
+# display_multiply=1.0,//倍率
+# total=33017,//總量
+# lastprice=21857.75,//成交價
+# lastvolume=1,//成交量
+# time='141835084'//成交時間
+#))
+``` 
+## 查詢最佳買進報價 
+透過fquote.[query_tick_data_bid]({{ "/API/fquote#query_tick_data_bid" | relative_url }})方法實作,帶入商品   
+回傳物件為[FTickDataBidResponse]({{ "/API/fquote/#回傳值-ftickdatabidresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[FTickDataBid]({{ "/API/fquote_data/#ftickdatabid-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
 
 ```python
-productid='CME|NQ|202409|F|' #商品代碼
+response = unitrade.fquote.query_tick_data_bid("CME", "NQ", "202509", "", "F")  
+# FTickDataBidResponse(ok=True, error='', data=FTickDataBid(
+# exchage='CME',//交易所
+# symbol='NQ',//商品代號
+# ym='202509',//年月
+# cp='F',//CP
+# strike='',//履約價
+# display_denominator=1.0,//分母
+# display_multiply=1.0,//倍率
+# BidDOM1Price=21846.5,//最佳買價1
+# BidDOM1Volume=1,//最佳買量1
+# BidDOM2Price=21846.25,//最佳買價2
+# BidDOM2Volume=3,//最佳買量2 
+# BidDOM3Price=21846.0,//最佳買價3 
+# BidDOM3Volume=4,//最佳買量3
+# BidDOM4Price=21845.75,//最佳買價4 
+# BidDOM4Volume=1,//最佳買量4 
+# BidDOM5Price=21845.5,//最佳買價5
+# BidDOM5Volume=2,//最佳買量5
+# BidDOM6Price=21845.25,//最佳買價6
+# BidDOM6Volume=2,//最佳買量6 
+# BidDOM7Price=21845.0,//最佳買價7
+# BidDOM7Volume=5,//最佳買量7
+# BidDOM8Price=21844.75,//最佳買價8 
+# BidDOM8Volume=4,//最佳買量8 
+# BidDOM9Price=21844.25,//最佳買價9
+# BidDOM9Volume=5,//最佳買量9 
+# BidDOM10Price=21844.0,//最佳買價10
+# BidDOM10Volume=5//最佳買量10
+#))  
+```
+## 查詢最佳賣出報價
+透過fquote.[query_tick_data_offer]({{ "/API/fquote#query_tick_data_offer" | relative_url }})方法實作,帶入商品   
+回傳物件為[FTickDataOfferResponse]({{ "/API/fquote/#回傳值-ftickdataofferresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[FTickDataOffer]({{ "/API/fquote_data/#ftickdataoffer-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+```python
+response = unitrade.fquote.query_tick_data_offer("CME", "NQ", "202509", "", "F")
+# FTickDataOfferResponse(ok=True, error='', data=FTickDataOffer(
+# exchage='CME',//交易所
+# symbol='NQ',//商品代號 
+# ym='202509',//年月
+# cp='F',//CP
+# strike='',//履約價
+# display_denominator=1.0,//分母
+# display_multiply=1.0,//倍率
+# OfferDOM1Price=21844.0,//最佳賣價1
+# OfferDOM1Volume=1,//最佳賣量1
+# OfferDOM2Price=21844.25,//最佳賣價2 
+# OfferDOM2Volume=2,//最佳賣量2
+# OfferDOM3Price=21844.5,//最佳賣價3
+# OfferDOM3Volume=3,//最佳賣量3 
+# OfferDOM4Price=21844.75,//最佳賣價4
+# OfferDOM4Volume=2,//最佳賣量4
+# OfferDOM5Price=21845.0,//最佳賣價5
+# OfferDOM5Volume=1,//最佳賣量5
+# OfferDOM6Price=21845.25,//最佳賣價6
+# OfferDOM6Volume=1,//最佳賣量6
+# OfferDOM7Price=21845.5,//最佳賣價7
+# OfferDOM7Volume=4,//最佳賣量7
+# OfferDOM8Price=21845.75,//最佳賣價8 
+# OfferDOM8Volume=1,//最佳賣量8 
+# OfferDOM9Price=21846.0,//最佳賣價9
+# OfferDOM9Volume=4,//最佳賣量9
+# OfferDOM10Price=21846.25,//最佳賣價10
+# OfferDOM10Volume=3//最佳賣量10
+#))
+```
+## 隱含買賣價量
+透過fquote.[query_tick_data_implied]({{ "/API/fquote#query_tick_data_implied" | relative_url }})方法實作,帶入商品   
+回傳物件為[FTickDataImpliedResponse]({{ "/API/fquote/#回傳值-ftickdataimpliedresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[FTickDataImplied]({{ "/API/fquote_data/#ftickdataimplied-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+```python
+response = unitrade.fquote.query_tick_data_implied("CME", "NQ", "202509", "", "F")
+# FTickDataImpliedResponse(ok=True, error='', data=FTickDataImplied(
+# exchage='CME',//交易所
+# symbol='NQ',//商品代號
+# ym='202509',//年月
+# cp='F',//CP
+# strike='',//履約價
+# display_denominator=1.0,//分母
+# display_multiply=1.0,//倍率 
+# ImpliedBidPrice=0.0,//隱含買價 
+# ImpliedBidVolume=0,//隱含買量 
+# ImpliedOfferPrice=0.0,//隱含賣價
+# ImpliedOfferVolume=0//隱含賣量
+#)
+```
+## 查詢開收盤價
+透過fquote.[query_tick_data_open_close]({{ "/API/fquote#query_tick_data_open_close" | relative_url }})方法實作,帶入商品   
+回傳物件為[FTickDataOpencloseResponse]({{ "/API/fquote/#回傳值-ftickdataopencloseresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[FTickDataOpenclose]({{ "/API/fquote_data/#ftickdataopenclose-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+
+```python
+response = unitrade.fquote.query_tick_data_open_close("CME", "NQ", "202509", "", "F")
+# FTickDataOpencloseResponse(ok=True, error='', data=FTickDataOpenclose
+# exchage='CME',//交易所
+# symbol='NQ',//商品代號
+# ym='202509',//年月
+# cp='F',//CP
+# strike='',//履約價
+# display_denominator=1.0,//分母 
+# display_multiply=1.0,//倍率 
+# Opening=21956.75,//開盤價
+# Closing=21842.75//收盤價
+#))
+```
+## 查詢最高最低價
+透過fquote.[query_tick_data_high_low]({{ "/API/fquote#query_tick_data_high_low" | relative_url }})方法實作,帶入商品   
+回傳物件為[FTickDataHighLowResponse]({{ "/API/fquote/#回傳值-ftickdatahighlowresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[FTickDataHighLow]({{ "/API/fquote_data/#ftickdatahighlow-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+
+```python
+response = unitrade.fquote.query_tick_data_high_low("CME", "NQ", "202509", "", "F")
+# FTickDataHighLowResponse(ok=True, error='', data=FTickDataHighLow(
+# exchage='CME',//交易所
+# symbol='NQ',//商品代號
+# ym='202509',//年月
+# cp='F',//CP
+# strike='',//履約價
+# display_denominator=1.0,//分母
+# display_multiply=1.0,//倍率 
+# High=21970.75,//最高價
+# Low=21790.0//最低價
+#))
+```
+## 查詢結算價
+透過fquote.[query_tick_data_settle]({{ "/API/fquote#query_tick_data_settle" | relative_url }})方法實作,帶入商品   
+回傳物件為[FTickDataSettleResponse]({{ "/API/fquote/#回傳值-ftickdatasettleresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[FTickDataSettle]({{ "/API/fquote_data/#ftickdatasettle-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+```python
+response = unitrade.fquote.query_tick_data_settle("CME", "NQ", "202509", "", "F")
+# FTickDataSettleResponse(ok=True, error='', data=FTickDataSettle(
+# exchage='CME',//交易所
+# symbol='NQ',//商品代號
+# ym='202509',//年月
+# cp='F',//CP
+# strike='',//履約價
+# display_denominator=1.0,//分母
+# display_multiply=1.0,//倍率
+# CurrStl=21945.25,//目前結算價
+# NewStl=21945.25//最新結算價
+#))
+```
+
+
+## 訂閱成交和最佳買賣價接收
+fquote.[on_tick_data_trade]({{ "/API/fquote#on_tick_data_trade" | relative_url }})事件接收成交價量  
+fquote.[on_tick_data_bid]({{ "/API/fquote#on_tick_data_bid" | relative_url }})事件接收最佳買價  
+fquote.[on_tick_data_offer]({{ "/API/fquote#on_tick_data_offer" | relative_url }})事件接收最佳賣價    
+fquote.[on_tick_data_implied]({{ "/API/fquote#on_tick_data_implied" | relative_url }})事件接收隱含價      
+fquote.[on_tick_data_high_low]({{ "/API/fquote#on_tick_data_high_low" | relative_url }})事件接收最高最低價  
+fquote.[on_tick_data_open_close]({{ "/API/fquote#on_tick_data_open_close" | relative_url }})事件接收開收盤價    
+fquote.[on_tick_data_settle]({{ "/API/fquote#on_tick_data_settle" | relative_url }})事件接收結算價  
+fquote.[subscribe]({{ "/API/fquote#subscribe" | relative_url }})方法可以註冊接收即時行情傳入商品  
+
+```python 
+#訂閱接收事件
+unitrade.fquote.on_tick_data_trade = on_tick_data_trade
+unitrade.fquote.on_tick_data_bid = on_tick_data_bid  
+unitrade.fquote.on_tick_data_offer = on_tick_data_offer  
+unitrade.fquote.on_tick_data_implied = on_tick_data_implied  
+unitrade.fquote.on_tick_data_high_low = on_tick_data_high_low  
+unitrade.fquote.on_tick_data_open_close = on_tick_data_open_close
+unitrade.fquote.on_tick_data_settle = on_tick_data_settle 
+# 註冊報價
+subok, msg = unitrade.fquote.subscribe("CME", "NQ", "202509", "", "F") 
+```
+```python 
 #成交價量處理
 def on_tick_data_trade(tickdatatrade: FTickDataTrade):
-    cur = list(fig.data[0].cells.values)
-    cur[col_idx['成交時間']] = tickdatatrade.time
-    cur[col_idx['成交價']] = tickdatatrade.lastprice
-    cur[col_idx['成交量']] = tickdatatrade.lastvolume
-    with fig.batch_update():
-        fig.data[0].cells.values = cur
+    print(tickdatatrade)
+    # FTickDataTrade(
+    # exchage='CME',//交易所
+    # symbol='NQ',//商品代號
+    # ym='202509',//年月
+    # cp='F',//CP
+    # strike='',//履約價
+    # display_denominator=1.0,//分母
+    # display_multiply=1.0,//倍率
+    # total=33017,//總量
+    # lastprice=21857.75,//成交價
+    # lastvolume=1,//成交量
+    # time='141835084'//成交時間
+    #))
 #最佳買價處理
 def on_tick_data_bid(tickdatabid: FTickDataBid):
-    cur = list(fig2.data[0].cells.values)
-    cur[col2_idx['買價1']] = tickdatabid.BidDOM1Price
-    cur[col2_idx['買量1']] = tickdatabid.BidDOM1Volume
-    cur[col2_idx['買價2']] = tickdatabid.BidDOM2Price
-    cur[col2_idx['買量2']] = tickdatabid.BidDOM2Volume
-    cur[col2_idx['買價3']] = tickdatabid.BidDOM3Price
-    cur[col2_idx['買量3']] = tickdatabid.BidDOM3Volume
-    cur[col2_idx['買價4']] = tickdatabid.BidDOM4Price
-    cur[col2_idx['買量4']] = tickdatabid.BidDOM4Volume
-    cur[col2_idx['買價5']] = tickdatabid.BidDOM5Price
-    cur[col2_idx['買量5']] = tickdatabid.BidDOM5Volume
-    cur[col2_idx['買價6']] = tickdatabid.BidDOM6Price
-    cur[col2_idx['買量6']] = tickdatabid.BidDOM6Volume
-    cur[col2_idx['買價7']] = tickdatabid.BidDOM7Price
-    cur[col2_idx['買量7']] = tickdatabid.BidDOM7Volume
-    cur[col2_idx['買價8']] = tickdatabid.BidDOM8Price
-    cur[col2_idx['買量8']] = tickdatabid.BidDOM8Volume
-    cur[col2_idx['買價9']] = tickdatabid.BidDOM9Price
-    cur[col2_idx['買量9']] = tickdatabid.BidDOM9Volume
-    cur[col2_idx['買價10']] = tickdatabid.BidDOM10Price
-    cur[col2_idx['買量10']] = tickdatabid.BidDOM10Volume
-    with fig2.batch_update():
-        fig2.data[0].cells.values = cur
+    print(tickdatabid)
+    # FTickDataBid(
+    # exchage='CME',//交易所
+    # symbol='NQ',//商品代號
+    # ym='202509',//年月
+    # cp='F',//CP
+    # strike='',//履約價
+    # display_denominator=1.0,//分母
+    # display_multiply=1.0,//倍率
+    # BidDOM1Price=21846.5,//最佳買價1
+    # BidDOM1Volume=1,//最佳買量1
+    # BidDOM2Price=21846.25,//最佳買價2
+    # BidDOM2Volume=3,//最佳買量2 
+    # BidDOM3Price=21846.0,//最佳買價3 
+    # BidDOM3Volume=4,//最佳買量3
+    # BidDOM4Price=21845.75,//最佳買價4 
+    # BidDOM4Volume=1,//最佳買量4 
+    # BidDOM5Price=21845.5,//最佳買價5
+    # BidDOM5Volume=2,//最佳買量5
+    # BidDOM6Price=21845.25,//最佳買價6
+    # BidDOM6Volume=2,//最佳買量6 
+    # BidDOM7Price=21845.0,//最佳買價7
+    # BidDOM7Volume=5,//最佳買量7
+    # BidDOM8Price=21844.75,//最佳買價8 
+    # BidDOM8Volume=4,//最佳買量8 
+    # BidDOM9Price=21844.25,//最佳買價9
+    # BidDOM9Volume=5,//最佳買量9 
+    # BidDOM10Price=21844.0,//最佳買價10
+    # BidDOM10Volume=5//最佳買量10
+    #))  
 #最佳賣價處理
 def on_tick_data_offer(tickdataOffer: FTickDataOffer):
-    cur = list(fig3.data[0].cells.values)
-    cur[col3_idx['賣價1']] = tickdataOffer.OfferDOM1Price
-    cur[col3_idx['賣量1']] = tickdataOffer.OfferDOM1Volume
-    cur[col3_idx['賣價2']] = tickdataOffer.OfferDOM2Price
-    cur[col3_idx['賣量2']] = tickdataOffer.OfferDOM2Volume
-    cur[col3_idx['賣價3']] = tickdataOffer.OfferDOM3Price
-    cur[col3_idx['賣量3']] = tickdataOffer.OfferDOM3Volume
-    cur[col3_idx['賣價4']] = tickdataOffer.OfferDOM4Price
-    cur[col3_idx['賣量4']] = tickdataOffer.OfferDOM4Volume
-    cur[col3_idx['賣價5']] = tickdataOffer.OfferDOM5Price
-    cur[col3_idx['賣量5']] = tickdataOffer.OfferDOM5Volume
-    cur[col3_idx['賣價6']] = tickdataOffer.OfferDOM6Price
-    cur[col3_idx['賣量6']] = tickdataOffer.OfferDOM6Volume
-    cur[col3_idx['賣價7']] = tickdataOffer.OfferDOM7Price
-    cur[col3_idx['賣量7']] = tickdataOffer.OfferDOM7Volume
-    cur[col3_idx['賣價8']] = tickdataOffer.OfferDOM8Price
-    cur[col3_idx['賣量8']] = tickdataOffer.OfferDOM8Volume
-    cur[col3_idx['賣價9']] = tickdataOffer.OfferDOM9Price
-    cur[col3_idx['賣量9']] = tickdataOffer.OfferDOM9Volume
-    cur[col3_idx['賣價10']] = tickdataOffer.OfferDOM10Price
-    cur[col3_idx['賣量10']] = tickdataOffer.OfferDOM10Volume
-    with fig3.batch_update():
-        fig3.data[0].cells.values = cur
-
-
-#訂閱接收事件
-api.fquote.on_tick_data_trade = on_tick_data_trade
-api.fquote.on_tick_data_bid = on_tick_data_bid
-api.fquote.on_tick_data_offer = on_tick_data_offer 
-if loginresponse.ok == True:
-    # 註冊報價
-    subok, msg = api.fquote.subscribe(exchange=productid.split('|')[0], symbol=productid.split(
-        '|')[1], ym=productid.split('|')[2], cp=productid.split('|')[3], strike=productid.split('|')[4])
-    print(f'註冊報價 {productid} {subok} {msg}')
-    display(fig)           
-    display(fig2)
-    display(fig3)
-
-
-```
-
-## 查詢隱含 最高最低 開收盤 結算價
-
-```python
-productid='CME|NQ|202409|F|' #商品代碼
-if loginresponse.ok == True: 
-    display(fig4)
-    #查詢隱含買賣價       
-    tickDataImpliedResponse=api.fquote.query_tick_data_implied(exchange= productid.split('|')[0], symbol= productid.split('|')[1], ym=productid.split('|')[2], cp= productid.split('|')[3], strike=productid.split('|')[4] )
-    if tickDataImpliedResponse.ok == True: 
-        tickdataimplied=tickDataImpliedResponse.data
-        cur = list(fig4.data[0].cells.values)
-        cur[col4_idx['隱含買價']] = tickdataimplied.ImpliedBidPrice 
-        cur[col4_idx['隱含買量']] = tickdataimplied.ImpliedBidVolume 
-        cur[col4_idx['隱含賣價']] = tickdataimplied.ImpliedOfferPrice 
-        cur[col4_idx['隱含賣量']] = tickdataimplied.ImpliedOfferVolume 
-        with fig4.batch_update():
-            fig4.data[0].cells.values = cur        
-    else:
-        print('tickDataImpliedResponse '+tickDataImpliedResponse.error)
-    #查詢開收盤價
-    tickDataOpencloseResponse=api.fquote.query_tick_data_open_close(exchange= productid.split('|')[0], symbol= productid.split('|')[1], ym=productid.split('|')[2], cp= productid.split('|')[3], strike=productid.split('|')[4] )
-    if tickDataOpencloseResponse.ok == True: 
-        tickdataopenclose=tickDataOpencloseResponse.data
-        cur = list(fig4.data[0].cells.values)
-        cur[col4_idx['開盤價']] = tickdataopenclose.Opening 
-        cur[col4_idx['收盤價']] = tickdataopenclose.Closing  
-        with fig4.batch_update():
-            fig4.data[0].cells.values = cur                
-    else:
-        print('tickDataOpencloseResponse '+tickDataOpencloseResponse.error)
-    #查詢最高最低價                   
-    tickDataHighLowResponse=api.fquote.query_tick_data_high_low(exchange= productid.split('|')[0], symbol= productid.split('|')[1], ym=productid.split('|')[2], cp= productid.split('|')[3], strike=productid.split('|')[4] )
-    if tickDataHighLowResponse.ok==True: 
-        tickdatahighlow=tickDataHighLowResponse.data
-        cur = list(fig4.data[0].cells.values)
-        cur[col4_idx['最高價']] = tickdatahighlow.High 
-        cur[col4_idx['最低價']] = tickdatahighlow.Low  
-        with fig4.batch_update():
-            fig4.data[0].cells.values = cur                 
-    else:
-        print('tickDataHighLowResponse '+tickDataHighLowResponse.error)
-    #查詢結算價            
-    tickDataSettleResponse=api.fquote.query_tick_data_settle(exchange= productid.split('|')[0], symbol= productid.split('|')[1], ym=productid.split('|')[2], cp= productid.split('|')[3], strike=productid.split('|')[4] )
-    if tickDataSettleResponse.ok==True: 
-        tickdatasettle=tickDataSettleResponse.data
-        cur = list(fig4.data[0].cells.values)
-        cur[col4_idx['目前結算價']] = tickdatasettle.CurrStl 
-        cur[col4_idx['最新結算價']] = tickdatasettle.NewStl  
-        with fig4.batch_update():
-            fig4.data[0].cells.values = cur           
-    else:
-        print('tickDataSettleResponse '+tickDataSettleResponse.error)                
-```
-## 註冊隱含 最高最低 開收盤 結算價
-
-```python
-productid='CME|NQ|202409|F|' #商品代碼
+    # FTickDataOffer(
+    # exchage='CME',//交易所
+    # symbol='NQ',//商品代號 
+    # ym='202509',//年月
+    # cp='F',//CP
+    # strike='',//履約價
+    # display_denominator=1.0,//分母
+    # display_multiply=1.0,//倍率
+    # OfferDOM1Price=21844.0,//最佳賣價1
+    # OfferDOM1Volume=1,//最佳賣量1
+    # OfferDOM2Price=21844.25,//最佳賣價2 
+    # OfferDOM2Volume=2,//最佳賣量2
+    # OfferDOM3Price=21844.5,//最佳賣價3
+    # OfferDOM3Volume=3,//最佳賣量3 
+    # OfferDOM4Price=21844.75,//最佳賣價4
+    # OfferDOM4Volume=2,//最佳賣量4
+    # OfferDOM5Price=21845.0,//最佳賣價5
+    # OfferDOM5Volume=1,//最佳賣量5
+    # OfferDOM6Price=21845.25,//最佳賣價6
+    # OfferDOM6Volume=1,//最佳賣量6
+    # OfferDOM7Price=21845.5,//最佳賣價7
+    # OfferDOM7Volume=4,//最佳賣量7
+    # OfferDOM8Price=21845.75,//最佳賣價8 
+    # OfferDOM8Volume=1,//最佳賣量8 
+    # OfferDOM9Price=21846.0,//最佳賣價9
+    # OfferDOM9Volume=4,//最佳賣量9
+    # OfferDOM10Price=21846.25,//最佳賣價10
+    # OfferDOM10Volume=3//最佳賣量10
+    #)) 
 #隱含買賣價接收處理
 def on_tick_data_implied(ticksataimplied: FTickDataImplied):
-    cur = list(fig4.data[0].cells.values)
-    cur[col4_idx['隱含買價']] = tickdataimplied.ImpliedBidPrice
-    cur[col4_idx['隱含買量']] = tickdataimplied.ImpliedBidVolume
-    cur[col4_idx['隱含賣價']] = tickdataimplied.ImpliedOfferPrice
-    cur[col4_idx['隱含賣量']] = tickdataimplied.ImpliedOfferVolume
-    with fig4.batch_update():
-        fig4.data[0].cells.values = cur
+    print(ticksataimplied)
+    # FTickDataImplied(
+    # exchage='CME',//交易所
+    # symbol='NQ',//商品代號
+    # ym='202509',//年月
+    # cp='F',//CP
+    # strike='',//履約價
+    # display_denominator=1.0,//分母
+    # display_multiply=1.0,//倍率 
+    # ImpliedBidPrice=0.0,//隱含買價 
+    # ImpliedBidVolume=0,//隱含買量 
+    # ImpliedOfferPrice=0.0,//隱含賣價
+    # ImpliedOfferVolume=0//隱含賣量
+    #)
 
 #最高最低價接收處理
 def on_tick_data_high_low(tickdatahighlow: FTickDataHighLow):
-    cur = list(fig4.data[0].cells.values)
-    cur[col4_idx['最高價']] = tickdatahighlow.High
-    cur[col4_idx['最低價']] = tickdatahighlow.Low
-    with fig4.batch_update():
-        fig4.data[0].cells.values = cur
-
+    print(tickdatahighlow)
+    # FTickDataHighLow(
+    # exchage='CME',//交易所
+    # symbol='NQ',//商品代號
+    # ym='202509',//年月
+    # cp='F',//CP
+    # strike='',//履約價
+    # display_denominator=1.0,//分母
+    # display_multiply=1.0,//倍率 
+    # High=21970.75,//最高價
+    # Low=21790.0//最低價
+    #))
 #開收盤價接收處理
 def on_tick_data_open_close(tickdataopenclose: FTickDataOpenclose):
-    cur = list(fig4.data[0].cells.values)
-    cur[col4_idx['開盤價']] = tickdataopenclose.Opening
-    cur[col4_idx['收盤價']] = tickdataopenclose.Closing
-    with fig4.batch_update():
-        fig4.data[0].cells.values = cur
+    print(tickdataopenclose)
+    # FTickDataOpenclose
+    # exchage='CME',//交易所
+    # symbol='NQ',//商品代號
+    # ym='202509',//年月
+    # cp='F',//CP
+    # strike='',//履約價
+    # display_denominator=1.0,//分母 
+    # display_multiply=1.0,//倍率 
+    # Opening=21956.75,//開盤價
+    # Closing=21842.75//收盤價
+    #))
 
 #結算價接收處理
 def on_tick_data_settle(tickdatasettle: FTickDataSettle):
-    cur = list(fig4.data[0].cells.values)
-    cur[col4_idx['目前結算價']] = tickdatasettle.CurrStl
-    cur[col4_idx['最新結算價']] = tickdatasettle.NewStl
-    with fig4.batch_update():
-        fig4.data[0].cells.values = cur
-
-#訂閱接收事件
-api.fquote.on_tick_data_implied = on_tick_data_implied
-api.fquote.on_tick_data_high_low = on_tick_data_high_low
-api.fquote.on_tick_data_open_close = on_tick_data_open_close
-api.fquote.on_tick_data_settle = on_tick_data_settle
-time.sleep(1)
-if loginresponse.ok == True:
-    # 註冊報價
-    subok, msg = api.fquote.subscribe(exchange=productid.split('|')[0], symbol=productid.split(
-        '|')[1], ym=productid.split('|')[2], cp=productid.split('|')[3], strike=productid.split('|')[4])
-    print(f'註冊報價 {productid} {subok} {msg}')
-    display(fig4) 
-
-```
+    print(tickdatasettle)
+    # FTickDataSettle(
+    # exchage='CME',//交易所
+    # symbol='NQ',//商品代號
+    # ym='202509',//年月
+    # cp='F',//CP
+    # strike='',//履約價
+    # display_denominator=1.0,//分母
+    # display_multiply=1.0,//倍率
+    # CurrStl=21945.25,//目前結算價
+    # NewStl=21945.25//最新結算價
+    #))
+``` 
 ## 反註冊報價
-
+fquote.[unsubscribe]({{ "/API/fquote#unsubscribe" | relative_url }})方法可以反註冊停止接收即時行情,傳入商品代碼 
 ```python
 #反註冊報價 
-unsub_ok,msg=api.fquote.unsubscribe(exchange= productid.split('|')[0], symbol= productid.split('|')[1], ym=productid.split('|')[2], cp= productid.split('|')[3], strike=productid.split('|')[4] ) 
+unsub_ok,msg=unitrade.fquote.unsubscribe("CME", "NQ", "202509", "", "F")
 print(f'反註冊報價 {productid} {unsub_ok} {msg}')
 ```
  
