--- a/教學/現貨行情.md
+++ b/教學/現貨行情.md
@@ -14,618 +14,458 @@ permalink: /教學/現貨行情/
 https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%AD%B8/sample/%E7%8F%BE%E8%B2%A8%E8%A1%8C%E6%83%85%E7%AF%84%E4%BE%8B.ipynb)
  
 > <a href="../sample/現貨行情範例.ipynb" download>下載範例</a> 
+ 
+## 查詢行情 
+### 查詢最後普通股競價交易即時行情資訊 
+透過squote.[query_tick_data]({{ "/API/squote#query_tick_data" | relative_url }})方法實作,帶入股票代碼  
+回傳物件為[TickDataResponse]({{ "/API/squote/#回傳值-tickdataresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[TickData]({{ "/API/squote_data/#tickdata-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
 
-
-<div class="markdown-google-sans">
-
-<strong>查詢行情</strong>
-</div>
-
-<div class="markdown-google-sans">
-
-<strong>查詢最後普通股競價交易即時行情資訊</strong>
-</div>
-透過query_tick_data方法實作,帶入股票代碼
+```python
+tickDataTradeResponse=unitrade.squote.query_tick_data('2330')
+# TickDataResponse(ok=True, error='', data=TickData(
+# stock_code='2330',//股票代號
+# match_time='133000000000',//撮合時間
+# limit_up_down_note='0',//漲跌停註記 str (0: 一般 64:跌停成交 128:漲停成交)
+# status_note='4',//狀態註記 str(4:收盤揭示 8:開盤揭示 16:逐筆撮合 32:延後收盤 64:延後開盤 128:試撮揭示 256:集合競價 512:一般揭示)
+# cumulative_volume=23904,//累計成交數量
+# trade_price=1035.0,//成交價 
+# trade_volume=2334,//成交量
+# best_bid_price_1=1035.0,//最佳一檔買進價
+# best_bid_volume_1=107,//最佳一檔買進量
+# best_bid_price_2=1030.0,//最佳二檔買進價 
+# best_bid_volume_2=3831,//最佳二檔買進量
+# best_bid_price_3=1025.0,//最佳三檔買進價
+# best_bid_volume_3=2908,//最佳三檔買進量 
+# best_bid_price_4=1020.0,//最佳四檔買進價
+# best_bid_volume_4=2494,//最佳四檔買進量
+# best_bid_price_5=1015.0,//最佳五檔買進價
+# best_bid_volume_5=637,//最佳五檔買進量 
+# best_ask_price_1=1040.0,//最佳一檔賣出價
+# best_ask_volume_1=3303,//最佳一檔賣出量
+# best_ask_price_2=1045.0,//最佳二檔賣出價
+# best_ask_volume_2=2110,//最佳二檔賣出量
+# best_ask_price_3=1050.0,//最佳三檔賣出價 
+# best_ask_volume_3=1475,//最佳三檔賣出量
+# best_ask_price_4=1055.0,//最佳四檔賣出價
+# best_ask_volume_4=1123,//最佳四檔賣出量
+# best_ask_price_5=1060.0,//最佳五檔賣出價
+# best_ask_volume_5=1694//最佳五檔賣出量
+#))　
+```
+ 
+### 查詢最後普通股競價交易開(收)盤價資料資訊  
+透過squote.[query_tick_data_open]({{ "/API/squote#query_tick_data_open" | relative_url }})方法實作,帶入股票代碼  
+回傳物件為[TickDataOpenCloseResponse]({{ "/API/squote/#回傳值-tickdataopencloseresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[TickDataOpenClose]({{ "/API/squote_data/#tickdataopenclose-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
 
 
 ```python
-tickDataTradeResponse=api.squote.query_tick_data('2330')
-if tickDataTradeResponse.ok == True: 
-    
-    tickdatatrade=tickDataTradeResponse.data
-    cur = list(fig_match.data[0].cells.values)
-    print(tickdatatrade)
-    cur[col_match['漲跌停註記']] = tickdatatrade.limit_up_down_note
-    cur[col_match['狀態註記']] = tickdatatrade.status_note    
-    cur[col_match['成交時間']] = tickdatatrade.match_time
-    cur[col_match['成交價']] = tickdatatrade.trade_price
-    cur[col_match['成交量']] = tickdatatrade.trade_volume
-    
-    with fig_match.batch_update():
-        fig_match.data[0].cells.values = cur
-    display(fig_match)
+tickdataopenResponse=unitrade.squote.query_tick_open_close('2330')
+# TickDataOpenCloseResponse(ok=True, error='', data=TickDataOpenClose(
+# stock_code='2330',\\股票代號
+# open_price=1045.0,\開盤價格
+# high_price=1045.0,\\最高成交價格
+# low_price=1030.0,\\最低成交價格
+# last_trade_price=1035.0,\\最近成交價
+# cumulative_volume=23904,\\累計成交量
+# time='999999999999'\\時間
+#))
+```
 
-    cur = list(fig_bs5.data[0].cells.values)
-    cur[col_bs5['買價1']] = tickdatatrade.best_bid_price_1
-    cur[col_bs5['買量1']] = tickdatatrade.best_bid_volume_1
-    cur[col_bs5['買價2']] = tickdatatrade.best_bid_price_2
-    cur[col_bs5['買量2']] = tickdatatrade.best_bid_volume_2
-    cur[col_bs5['買價3']] = tickdatatrade.best_bid_price_3
-    cur[col_bs5['買量3']] = tickdatatrade.best_bid_volume_3
-    cur[col_bs5['買價4']] = tickdatatrade.best_bid_price_4
-    cur[col_bs5['買量4']] = tickdatatrade.best_bid_volume_4
-    cur[col_bs5['買價5']] = tickdatatrade.best_bid_price_5
-    cur[col_bs5['買量5']] = tickdatatrade.best_bid_volume_5        
+### 查詢普通個股基本資料 
+透過squote.[query_base_data]({{ "/API/squote#query_base_data" | relative_url }})方法實作,帶入股票代碼  
+回傳物件為[BaseDataResponse]({{ "/API/squote/#回傳值-basedataresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[BaseData]({{ "/API/squote_data/#basedata-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
 
-    cur[col_bs5['賣價1']] = tickdatatrade.best_ask_price_1
-    cur[col_bs5['賣量1']] = tickdatatrade.best_ask_volume_1
-    cur[col_bs5['賣價2']] = tickdatatrade.best_ask_price_2
-    cur[col_bs5['賣量2']] = tickdatatrade.best_ask_volume_2
-    cur[col_bs5['賣價3']] = tickdatatrade.best_ask_price_3
-    cur[col_bs5['賣量3']] = tickdatatrade.best_ask_volume_3
-    cur[col_bs5['賣價4']] = tickdatatrade.best_ask_price_4
-    cur[col_bs5['賣量4']] = tickdatatrade.best_ask_volume_4
-    cur[col_bs5['賣價5']] = tickdatatrade.best_ask_price_5
-    cur[col_bs5['賣量5']] = tickdatatrade.best_ask_volume_5       
-    with fig_bs5.batch_update():
-        fig_bs5.data[0].cells.values = cur     
-    display(fig_bs5)
+```python
+baseDataResponse=unitrade.squote.query_base_data('2330')
+# BaseDataResponse(ok=True, error='', data=BaseData(
+# stock_code='2330',\\股票代號
+# product_name='台積電          ',\\商品名稱
+# industry='24',\\產業別
+# security_type='  ',\\證券別
+# stock_abnormal_code='0',\\股票異常代碼
+# reference_price='1055.0000',\\參考價
+# upper_limit_price='1160.0000',\\漲停價
+# lower_limit_price='950.0000',\\跌停價
+# non_10_denomination=' ',\\非10元面額
+# abnormal_recommendation_note=' ',\\異常推介個股註記
+# special_abnormal_security_note=' ',\\特殊異常證券註記
+# day_trading_note='A',\\可現股當沖註記
+# exempt_short_selling_note='Y',\\豁免平盤下融券賣出註記
+# exempt_borrowing_short_selling_note='Y',\\豁免平盤下借券賣出註記
+# matching_cycle_seconds='0',\\撮合循環秒數
+# foreign_stock_identifier=' ',\\外國股票識別碼
+# trading_unit='1000',\\交易單位
+# trading_currency_code='   '\\交易幣別代號
+#))
+　
+```
 
-else:
-    print("錯誤訊息 "+tickDataTradeResponse.error)
+## 查詢最後OTC競價交易即時行情資訊 
+透過squote.[query_otc_tick_data]({{ "/API/squote#query_otc_tick_data" | relative_url }})方法實作,帶入股票代碼  
+回傳物件為[TickDataResponse]({{ "/API/squote/#回傳值-tickdataresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[TickData]({{ "/API/squote_data/#tickdata-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
+
+```python
+tickDataTradeResponse=unitrade.squote.query_otc_tick_data('5483')
+# TickDataResponse(ok=True, error='', data=TickData(
+# stock_code='5483',\\股票代號
+# match_time='133000000000',\\撮合時間
+# limit_up_down_note='0',\\漲跌停註記 str (0: 一般 64:跌停成交 128:漲停成交)
+# status_note='4',\\狀態註記 str(4:收盤揭示 8:開盤揭示 16:逐筆撮合 32:延後收盤 64:延後開盤 128:試撮揭示 256:集合競價 512:一般揭示)
+# cumulative_volume=4174,\\累計成交數量
+# trade_price=91.2,\\成交價
+# trade_volume=359,\\成交量
+# best_bid_price_1=91.2,\\最佳一檔買進價
+# best_bid_volume_1=35,\\最佳一檔買進量
+# best_bid_price_2=91.1,\\最佳二檔買進價
+# best_bid_volume_2=54,\\最佳二檔買進量 
+# best_bid_price_3=91.0,\\最佳三檔買進價
+# best_bid_volume_3=178,\\最佳三檔買進量
+# best_bid_price_4=90.9,\\最佳四檔買進價
+# best_bid_volume_4=33,\\最佳四檔買進量
+# best_bid_price_5=90.8,\\最佳五檔買進價
+# best_bid_volume_5=34,\\最佳五檔買進量
+# best_ask_price_1=91.3,\\最佳一檔賣出價
+# best_ask_volume_1=7,\\最佳一檔賣出量
+# best_ask_price_2=91.5,\\最佳二檔賣出價
+# best_ask_volume_2=5,\\最佳二檔賣出量
+# best_ask_price_3=91.6,\\最佳三檔賣出價
+# best_ask_volume_3=2,\\最佳三檔賣出量
+# best_ask_price_4=91.7,\\最佳四檔賣出價
+# best_ask_volume_4=21,\\最佳四檔賣出量
+# best_ask_price_5=91.8,\\最佳五檔賣出價 
+# best_ask_volume_5=13\\最佳五檔賣出量
+#))  
+　
 ```
 
 
-<div class="markdown-google-sans">
-
-<strong>查詢最後普通股競價交易開(收)盤價資料資訊</strong>
-</div>
-透過query_tick_data_open方法實作,帶入股票代碼
-
+## 查詢最後otc競價交易開(收)盤價資料資訊 
+透過squote.[query_otc_tick_open_close]({{ "/API/squote#query_otc_tick_open_close" | relative_url }})方法實作,帶入股票代碼  
+回傳物件為[TickDataOpenCloseResponse]({{ "/API/squote/#回傳值-tickdataopencloseresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[TickDataOpenClose]({{ "/API/squote_data/#tickdataopenclose-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
 
 
 ```python
-tickdataopenResponse=api.squote.query_tick_open_close('2330')
-if tickdataopenResponse.ok == True:
-    tickdataopen=tickdataopenResponse.data
-    cur = list(fig_open.data[0].cells.values) 
-    cur[col_open['開盤價格']] = tickdataopen.open_price 
-    cur[col_open['最高成交價格']] = tickdataopen.high_price
-    cur[col_open['最低成交價格']] = tickdataopen.low_price
-    cur[col_open['最近成交價']] = tickdataopen.last_trade_price
-    cur[col_open['累計成交量']] = tickdataopen.cumulative_volume
-    cur[col_open['時間']] = tickdataopen.time 
-
-    with fig_open.batch_update():
-        fig_open.data[0].cells.values = cur
-    display(fig_open)
-else:
-    print("錯誤訊息 "+tickdataopenResponse.error)
+tickdataopenResponse=unitrade.squote.query_otc_tick_open_close('5483')
+# TickDataOpenCloseResponse(ok=True, error='', data=TickDataOpenClose(
+# stock_code='5483',//股票代號
+# open_price=93.8,//開盤價格
+# high_price=94.2,//最高成交價格
+# low_price=91.2,//最低成交價格
+# last_trade_price=91.2,//最近成交價
+# cumulative_volume=4174,//累計成交量
+# time='999999999999'//時間 
+#))
 ```
 
 
-<div class="markdown-google-sans">
-
-<strong>查詢普通個股基本資料</strong>
-</div>
-透過query_base_data方法實作,帶入股票代碼
-
+## 查詢otc基本資料 
+透過squote.[query_otc_base_data]({{ "/API/squote#query_otc_base_data" | relative_url }})方法實作,帶入股票代碼  
+回傳物件為[OTCBaseDataResponse]({{ "/API/squote/#回傳值-otcbasedataresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[OTCBaseData]({{ "/API/squote_data/#otcbasedata-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息
 
 ```python
-baseDataResponse=api.squote.query_base_data('2330')
-if baseDataResponse.ok == True:
-    tickdatahighlow=baseDataResponse.data
-    cur = list(fig_base.data[0].cells.values)  
-    
-    cur[col_base['股票代號']] = tickdatahighlow.stock_code
-    cur[col_base['商品名稱']] = tickdatahighlow.product_name
-    cur[col_base['產業別']] = tickdatahighlow.industry
-    cur[col_base['證券別']] = tickdatahighlow.security_type
-    cur[col_base['股票異常代碼']] = tickdatahighlow.stock_abnormal_code
-    cur[col_base['參考價']] = tickdatahighlow.reference_price
-    cur[col_base['漲停價']] = tickdatahighlow.upper_limit_price
-    cur[col_base['跌停價']] = tickdatahighlow.lower_limit_price
-    cur[col_base['非10元面額']] = tickdatahighlow.non_10_denomination
-    cur[col_base['異常推介個股註記']] = tickdatahighlow.abnormal_recommendation_note
-    cur[col_base['特殊異常證券註記']] = tickdatahighlow.special_abnormal_security_note
-    cur[col_base['可現股當沖註記']] = tickdatahighlow.day_trading_note
-    cur[col_base['豁免平盤下融券賣出註記']] = tickdatahighlow.exempt_short_selling_note
-    cur[col_base['豁免平盤下借券賣出註記']] = tickdatahighlow.exempt_borrowing_short_selling_note
-    cur[col_base['搓合循環秒數']] = tickdatahighlow.matching_cycle_seconds
-    cur[col_base['外國股票識別碼']] = tickdatahighlow.foreign_stock_identifier
-    cur[col_base['交易單位']] = tickdatahighlow.trading_unit
-    cur[col_base['交易幣別代號']] = tickdatahighlow.trading_currency_code 
-    with fig_base.batch_update():
-        fig_base.data[0].cells.values = cur
-    display(fig_base)
-else:
-    print("錯誤 "+baseDataResponse.error)
+baseDataResponse=unitrade.squote.query_otc_base_data('5483')
+# OTCBaseDataResponse(ok=True, error='', data=OTCBaseData(
+# stock_code='5483',\\股票代號 
+# product_name='中美晶          ',\\商品名稱
+# industry='24',\\產業別
+# security_type='  ',\\證券別
+# stock_abnormal_code='0',\\股票異常代碼
+# stock_type='48',\\類股註記
+# reference_price='94.2000',\\參考價 
+# upper_limit_price='103.5000',\\漲停價 
+# lower_limit_price='84.8000',\\跌停價 
+# non_10_denomination=' ',\\非10元面額
+# abnormal_recommendation_note=' ',\\異常推介個股註記
+# special_abnormal_security_note=' ',\\特殊異常證券註記
+# day_trading_note='A',\\可現股當沖註記
+# exempt_short_selling_note='Y',\\豁免平盤下融券賣出註記
+# exempt_borrowing_short_selling_note='Y',\\豁免平盤下借券賣出註記 
+# matching_cycle_seconds='0',\\撮合循環秒數
+# trading_unit='1000',\\交易單位
+# trading_currency_code='   '\\交易幣別代號
+#))
+　
 
 
 ```
-
-<div class="markdown-google-sans">
-
-<strong>查詢最後OTC競價交易即時行情資訊</strong>
-</div>
-透過query_otc_tick_data方法實作,帶入股票代碼
-
-
-```python
-tickDataTradeResponse=api.squote.query_otc_tick_data('5483')
-if tickDataTradeResponse.ok == True: 
-    tickdatatrade=tickDataTradeResponse.data
-    cur = list(fig_match.data[0].cells.values)
-    cur[col_match['漲跌停註記']] = tickdatatrade.limit_up_down_note
-    cur[col_match['狀態註記']] = tickdatatrade.status_note    
-    cur[col_match['成交時間']] = tickdatatrade.match_time
-    cur[col_match['成交價']] = tickdatatrade.trade_price
-    cur[col_match['成交量']] = tickdatatrade.trade_volume
-    
-    with fig_match.batch_update():
-        fig_match.data[0].cells.values = cur
-    display(fig_match)
-
-    cur = list(fig_bs5.data[0].cells.values)
-    cur[col_bs5['買價1']] = tickdatatrade.best_bid_price_1
-    cur[col_bs5['買量1']] = tickdatatrade.best_bid_volume_1
-    cur[col_bs5['買價2']] = tickdatatrade.best_bid_price_2
-    cur[col_bs5['買量2']] = tickdatatrade.best_bid_volume_2
-    cur[col_bs5['買價3']] = tickdatatrade.best_bid_price_3
-    cur[col_bs5['買量3']] = tickdatatrade.best_bid_volume_3
-    cur[col_bs5['買價4']] = tickdatatrade.best_bid_price_4
-    cur[col_bs5['買量4']] = tickdatatrade.best_bid_volume_4
-    cur[col_bs5['買價5']] = tickdatatrade.best_bid_price_5
-    cur[col_bs5['買量5']] = tickdatatrade.best_bid_volume_5        
-
-    cur[col_bs5['賣價1']] = tickdatatrade.best_ask_price_1
-    cur[col_bs5['賣量1']] = tickdatatrade.best_ask_volume_1
-    cur[col_bs5['賣價2']] = tickdatatrade.best_ask_price_2
-    cur[col_bs5['賣量2']] = tickdatatrade.best_ask_volume_2
-    cur[col_bs5['賣價3']] = tickdatatrade.best_ask_price_3
-    cur[col_bs5['賣量3']] = tickdatatrade.best_ask_volume_3
-    cur[col_bs5['賣價4']] = tickdatatrade.best_ask_price_4
-    cur[col_bs5['賣量4']] = tickdatatrade.best_ask_volume_4
-    cur[col_bs5['賣價5']] = tickdatatrade.best_ask_price_5
-    cur[col_bs5['賣量5']] = tickdatatrade.best_ask_volume_5       
-    with fig_bs5.batch_update():
-        fig_bs5.data[0].cells.values = cur     
-    display(fig_bs5)
-
-else:
-    print("錯誤訊息 "+tickDataTradeResponse.error)
-```
-
-
-<div class="markdown-google-sans">
-
-<strong>查詢最後otc競價交易開(收)盤價資料資訊</strong>
-</div>
-透過query_otc_tick_data_open方法實作,帶入股票代碼
-
-
-
-```python
-tickdataopenResponse=api.squote.query_otc_tick_open_close('5483')
-if tickdataopenResponse.ok == True:
-    tickdataopen=tickdataopenResponse.data
-    cur = list(fig_open.data[0].cells.values) 
-    cur[col_open['開盤價格']] = tickdataopen.open_price 
-    cur[col_open['最高成交價格']] = tickdataopen.high_price
-    cur[col_open['最低成交價格']] = tickdataopen.low_price
-    cur[col_open['最近成交價']] = tickdataopen.last_trade_price
-    cur[col_open['累計成交量']] = tickdataopen.cumulative_volume
-    cur[col_open['時間']] = tickdataopen.time 
-
-    with fig_open.batch_update():
-        fig_open.data[0].cells.values = cur
-    display(fig_open)
-else:
-    print("錯誤訊息 "+tickdataopenResponse.error)
-```
-
-
-<div class="markdown-google-sans">
-
-<strong>查詢otc基本資料</strong>
-</div>
-透過query_otc_base_data方法實作,帶入股票代碼
-
-
-```python
-baseDataResponse=api.squote.query_otc_base_data('5483')
-if baseDataResponse.ok == True:
-    tickdatahighlow=baseDataResponse.data
-    cur = list(fig_base.data[0].cells.values) 
-   
-    cur[col_base['股票代號']] = tickdatahighlow.stock_code
-    cur[col_base['商品名稱']] = tickdatahighlow.product_name
-    cur[col_base['產業別']] = tickdatahighlow.industry
-    cur[col_base['證券別']] = tickdatahighlow.security_type
-    cur[col_base['股票異常代碼']] = tickdatahighlow.stock_abnormal_code
-    cur[col_base['參考價']] = tickdatahighlow.reference_price
-    cur[col_base['漲停價']] = tickdatahighlow.upper_limit_price
-    cur[col_base['跌停價']] = tickdatahighlow.lower_limit_price
-    cur[col_base['非10元面額']] = tickdatahighlow.non_10_denomination
-    cur[col_base['異常推介個股註記']] = tickdatahighlow.abnormal_recommendation_note
-    cur[col_base['特殊異常證券註記']] = tickdatahighlow.special_abnormal_security_note
-    cur[col_base['可現股當沖註記']] = tickdatahighlow.day_trading_note
-    cur[col_base['豁免平盤下融券賣出註記']] = tickdatahighlow.exempt_short_selling_note
-    cur[col_base['豁免平盤下借券賣出註記']] = tickdatahighlow.exempt_borrowing_short_selling_note
-    cur[col_base['搓合循環秒數']] = tickdatahighlow.matching_cycle_seconds 
-    cur[col_base['交易單位']] = tickdatahighlow.trading_unit
-    cur[col_base['交易幣別代號']] = tickdatahighlow.trading_currency_code 
-
-    with fig_base.batch_update():
-        fig_base.data[0].cells.values = cur
-    display(fig_base)
-else:
-    print("錯誤 "+baseDataResponse.error)
-
-
-```
-
-
-<div class="markdown-google-sans">
-
-<strong>查詢最後指數資料資訊</strong>
-</div>
-透過query_index_data方法實作,帶入指數代號 臺股指數 IX0001  臺灣50指數 TW50  臺灣中型100指數 TWMC  臺灣資訊科技指數 TWIT  臺灣發達指數 TWEI  臺灣高股息指數 TWDP  臺灣就業99指數 EMP99  臺灣公司治理100指數 CG100  寶島股價指數 FRMSA  臺灣高薪100指數 HC100  電子類兩倍槓桿指數 EDRL2  電子類反向指數 EDRIN  臺指日報酬兩倍指數 TTDRL2  臺指反向一倍指數 TTDRIN  小型股300指數 SC300  金融類日報酬兩倍指數 FDRL2  金融類日報酬反向一倍指數 FDRIN  漲升股利150指數 DVA150  漲升股利100指數 DVA100  藍籌30指數 BC30  工業菁英30指數 INE30  電子菁英30指數 ITE30  低波動精選30指數 LV30  低貝塔100指數 LB100  藍籌30反向一倍指數 BC30-1  中小型精選50指數 SMC50  中小型A級動能50指數 SAM50  臺灣永續指數 F4GTTE  股利150報酬指數 IR0091  電子菁英30報酬指數 IR0095  存股雙十等權重報酬指數 IR0112  特選大蘋果報酬指數 IR0113  中小型300報酬指數 IR0114  特股高息20報酬指數 IR0115  臺灣500報酬指數 IR0116  特選外資豐擁50報酬指數 IR0117  臺灣生技指數 IX0103  特選高息低波指數 IX0104  工業菁英30反向一倍指數 IX0106  特選內需高收益指數 IX0107  臺灣中小型公司治理指數 IX0108  臺灣IPO指數 IX0109  價值投資指數 IX0110  中小型300指數 IX0114 |
+## 查詢最後指數資料資訊 
+透過squote.[query_index_data]({{ "/API/squote#query_index_data" | relative_url }})方法實作,帶入[指數代碼]({{ "/說明/現貨指數代碼/" | relative_url }})  
+  
+回傳物件為[IndexDataResponse]({{ "/API/squote/#回傳值-indexdataresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[IndexData]({{ "/API/squote_data/#indexdata-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息   
 
 
 
 ```python
-indexDataResponse=api.squote.query_index_data('IX0001')
-if indexDataResponse.ok == True:
-    indexdata=indexDataResponse.data
-    cur = list(fig_idx.data[0].cells.values) 
-   
-    cur[col_idx['指數代號']] = indexdata.index_code 
-    cur[col_idx['指數時間']] = indexdata.index_time 
-    cur[col_idx['最新指數']] = indexdata.latest_index 
-    with fig_idx.batch_update():
-        fig_idx.data[0].cells.values = cur 
-
-    display(fig_idx)
-else:
-    print("錯誤 "+indexDataResponse.error)
-
-
+indexDataResponse=unitrade.squote.query_index_data('IX0001')
+# IndexDataResponse(ok=True, error='', data=IndexData(
+#index_code='IX0001',\\指數代號
+# index_time='999999',\\指數時間
+# latest_index=22003.5\\最新指數
+#))
+ 
 ```
-
-
-<div class="markdown-google-sans">
-
-<strong>查詢最後櫃買指數資料資訊</strong>
-</div>
-透過query_otc_index_data方法實作,帶入指數代號
-櫃買指數:IX0043  富櫃五十指數:GTSM50  指標公債指數:TWTBI  線上遊戲業指數:GAME  高殖利率指數:GTHD  勞工就業88指數:EMP88  櫃買薪酬指數:GTCI  櫃買公司治理指數:TPCGI  富櫃200報酬指數:IR0118  臺灣生技指數:IX0103  臺灣中小型公司治理指數:IX0108  臺灣IPO指數:IX0109  富櫃200指數:IX0118  
+## 查詢最後櫃買指數資料資訊 
+透過squote.[query_otc_index_data]({{ "/API/squote#query_otc_index_data" | relative_url }})方法實作,帶入[OTC指數代碼]({{ "/說明/櫃買指數代碼/" | relative_url }})  
+回傳物件為[IndexDataResponse]({{ "/API/squote/#回傳值-indexdataresponse" | relative_url }})  
+ok為True表示查詢成功,data型別為[IndexData]({{ "/API/squote_data/#indexdata-objects" | relative_url }})  
+ok為False表示查詢失敗,error會呈現錯誤訊息    
 
 
 ```python
-indexDataResponse=api.squote.query_otc_index_data('IX0043')
-if indexDataResponse.ok == True:
-    indexdata=indexDataResponse.data
-    cur = list(fig_idx.data[0].cells.values) 
-   
-    cur[col_idx['指數代號']] = indexdata.index_code 
-    cur[col_idx['指數時間']] = indexdata.index_time 
-    cur[col_idx['最新指數']] = indexdata.latest_index 
-    with fig_idx.batch_update():
-        fig_idx.data[0].cells.values = cur 
-
-    display(fig_idx)
-else:
-    print("錯誤 "+indexDataResponse.error)
-
-
+indexDataResponse=unitrade.squote.query_otc_index_data('IX0043')
+# IndexDataResponse(ok=True, error='', data=IndexData(
+# index_code='IX0043',\\指數代號
+# index_time='999999',\\指數時間
+# latest_index=228.56\\最新指數
+#)) 
 ```
 
-<div class="markdown-google-sans">
-
- <strong>接收即時行情</strong>
-</div>
-
-<div class="markdown-google-sans">
-
- <strong>*股票行情*</strong>
-</div>
-
-<div class="markdown-google-sans">
-
- <strong>*註冊*</strong>
-</div>
-
-
+## 接收即時行情 
+### 股票行情 
+### 註冊 
+squote.[on_tick_data]({{ "/API/squote#on_tick_data" | relative_url }})事件接收即時行情  
+squote.[on_base_data]({{ "/API/squote#on_tick_data" | relative_url }})事件接收基本資料  
+squote.[on_tick_data_open_close]({{ "/API/squote#on_tick_data" | relative_url }})事件接收開收盤資訊  
+squote.[sub_stock]({{ "/API/squote#sub_stock" | relative_url }})方法可以註冊接收即時行情.基本資料.開收盤資訊,傳入股票代碼  
+```python
+#訂閱接收事件
+unitrade.squote.on_tick_data = on_tick_data 
+unitrade.squote.on_base_data = on_base_data 
+unitrade.squote.on_tick_data_open_close = on_tick_data_open_close 
+subok,msg=unitrade.squote.sub_stock('2330')
+print(f'註冊結果 {subok} {msg}') 
+```
 ```python
 def on_tick_data(tickdatatrade: TickData):  
-    if tickdatatrade.trade_volume>0 :
-        cur = list(fig_match.data[0].cells.values)
-        cur[col_match['漲跌停註記']] = tickdatatrade.limit_up_down_note
-        cur[col_match['狀態註記']] = tickdatatrade.status_note        
-        cur[col_match['成交時間']] = tickdatatrade.match_time
-        cur[col_match['成交價']] = tickdatatrade.trade_price
-        cur[col_match['成交量']] = tickdatatrade.trade_volume
-        
-        with fig_match.batch_update():
-            fig_match.data[0].cells.values = cur  
-    if tickdatatrade.best_bid_volume_1>0 :
-        cur = list(fig_bs5.data[0].cells.values)
-        cur[col_bs5['買價1']] = tickdatatrade.best_bid_price_1
-        cur[col_bs5['買量1']] = tickdatatrade.best_bid_volume_1
-        cur[col_bs5['買價2']] = tickdatatrade.best_bid_price_2
-        cur[col_bs5['買量2']] = tickdatatrade.best_bid_volume_2
-        cur[col_bs5['買價3']] = tickdatatrade.best_bid_price_3
-        cur[col_bs5['買量3']] = tickdatatrade.best_bid_volume_3
-        cur[col_bs5['買價4']] = tickdatatrade.best_bid_price_4
-        cur[col_bs5['買量4']] = tickdatatrade.best_bid_volume_4
-        cur[col_bs5['買價5']] = tickdatatrade.best_bid_price_5
-        cur[col_bs5['買量5']] = tickdatatrade.best_bid_volume_5        
+    print(tickdatatrade)
+    #TickData(
+    # stock_code='2330',//股票代號
+    # match_time='133000000000',//撮合時間
+    # limit_up_down_note='0',//漲跌停註記 str (0: 一般 64:跌停成交 128:漲停成交)
+    # status_note='4',//狀態註記 str(4:收盤揭示 8:開盤揭示 16:逐筆撮合 32:延後收盤 64:延後開盤 128:試撮揭示 256:集合競價 512:一般揭示)
+    # cumulative_volume=23904,//累計成交數量
+    # trade_price=1035.0,//成交價 
+    # trade_volume=2334,//成交量
+    # best_bid_price_1=1035.0,//最佳一檔買進價
+    # best_bid_volume_1=107,//最佳一檔買進量
+    # best_bid_price_2=1030.0,//最佳二檔買進價 
+    # best_bid_volume_2=3831,//最佳二檔買進量
+    # best_bid_price_3=1025.0,//最佳三檔買進價
+    # best_bid_volume_3=2908,//最佳三檔買進量 
+    # best_bid_price_4=1020.0,//最佳四檔買進價
+    # best_bid_volume_4=2494,//最佳四檔買進量
+    # best_bid_price_5=1015.0,//最佳五檔買進價
+    # best_bid_volume_5=637,//最佳五檔買進量 
+    # best_ask_price_1=1040.0,//最佳一檔賣出價
+    # best_ask_volume_1=3303,//最佳一檔賣出量
+    # best_ask_price_2=1045.0,//最佳二檔賣出價
+    # best_ask_volume_2=2110,//最佳二檔賣出量
+    # best_ask_price_3=1050.0,//最佳三檔賣出價 
+    # best_ask_volume_3=1475,//最佳三檔賣出量
+    # best_ask_price_4=1055.0,//最佳四檔賣出價
+    # best_ask_volume_4=1123,//最佳四檔賣出量
+    # best_ask_price_5=1060.0,//最佳五檔賣出價
+    # best_ask_volume_5=1694//最佳五檔賣出量
+    #))　  
 
-        cur[col_bs5['賣價1']] = tickdatatrade.best_ask_price_1
-        cur[col_bs5['賣量1']] = tickdatatrade.best_ask_volume_1
-        cur[col_bs5['賣價2']] = tickdatatrade.best_ask_price_2
-        cur[col_bs5['賣量2']] = tickdatatrade.best_ask_volume_2
-        cur[col_bs5['賣價3']] = tickdatatrade.best_ask_price_3
-        cur[col_bs5['賣量3']] = tickdatatrade.best_ask_volume_3
-        cur[col_bs5['賣價4']] = tickdatatrade.best_ask_price_4
-        cur[col_bs5['賣量4']] = tickdatatrade.best_ask_volume_4
-        cur[col_bs5['賣價5']] = tickdatatrade.best_ask_price_5
-        cur[col_bs5['賣量5']] = tickdatatrade.best_ask_volume_5       
-        with fig_bs5.batch_update():
-            fig_bs5.data[0].cells.values = cur    
 
-def on_base_data(basedata: BaseData):         
-    cur = list(fig_base.data[0].cells.values) 
-   
-    cur[col_base['股票代號']] = tickdatahighlow.stock_code
-    cur[col_base['商品名稱']] = tickdatahighlow.product_name
-    cur[col_base['產業別']] = tickdatahighlow.industry
-    cur[col_base['證券別']] = tickdatahighlow.security_type
-    cur[col_base['股票異常代碼']] = tickdatahighlow.stock_abnormal_code
-    cur[col_base['參考價']] = tickdatahighlow.reference_price
-    cur[col_base['漲停價']] = tickdatahighlow.upper_limit_price
-    cur[col_base['跌停價']] = tickdatahighlow.lower_limit_price
-    cur[col_base['非10元面額']] = tickdatahighlow.non_10_denomination
-    cur[col_base['異常推介個股註記']] = tickdatahighlow.abnormal_recommendation_note
-    cur[col_base['特殊異常證券註記']] = tickdatahighlow.special_abnormal_security_note
-    cur[col_base['可現股當沖註記']] = tickdatahighlow.day_trading_note
-    cur[col_base['豁免平盤下融券賣出註記']] = tickdatahighlow.exempt_short_selling_note
-    cur[col_base['豁免平盤下借券賣出註記']] = tickdatahighlow.exempt_borrowing_short_selling_note
-    cur[col_base['搓合循環秒數']] = tickdatahighlow.matching_cycle_seconds 
-    cur[col_base['交易單位']] = tickdatahighlow.trading_unit
-    cur[col_base['交易幣別代號']] = tickdatahighlow.trading_currency_code 
-
-    with fig_base.batch_update():
-        fig_base.data[0].cells.values = cur
+def on_base_data(basedata: BaseData):   
+    print(basedata)      
+    #BaseData(
+    # stock_code='2330',\\股票代號
+    # product_name='台積電          ',\\商品名稱
+    # industry='24',\\產業別
+    # security_type='  ',\\證券別
+    # stock_abnormal_code='0',\\股票異常代碼
+    # reference_price='1055.0000',\\參考價
+    # upper_limit_price='1160.0000',\\漲停價
+    # lower_limit_price='950.0000',\\跌停價
+    # non_10_denomination=' ',\\非10元面額
+    # abnormal_recommendation_note=' ',\\異常推介個股註記
+    # special_abnormal_security_note=' ',\\特殊異常證券註記
+    # day_trading_note='A',\\可現股當沖註記
+    # exempt_short_selling_note='Y',\\豁免平盤下融券賣出註記
+    # exempt_borrowing_short_selling_note='Y',\\豁免平盤下借券賣出註記
+    # matching_cycle_seconds='0',\\撮合循環秒數
+    # foreign_stock_identifier=' ',\\外國股票識別碼
+    # trading_unit='1000',\\交易單位
+    # trading_currency_code='   '\\交易幣別代號
+    #))
     
 def on_tick_data_open_close(tickdataopen: TickDataOpenClose):
-    cur = list(fig_open.data[0].cells.values) 
-    cur[col_open['開盤價格']] = tickdataopen.open_price 
-    cur[col_open['最高成交價格']] = tickdataopen.high_price
-    cur[col_open['最低成交價格']] = tickdataopen.low_price
-    cur[col_open['最近成交價']] = tickdataopen.last_trade_price
-    cur[col_open['累計成交量']] = tickdataopen.cumulative_volume
-    cur[col_open['時間']] = tickdataopen.time  
-    with fig_open.batch_update():
-        fig_open.data[0].cells.values = cur
-
-#訂閱接收事件
-api.squote.on_tick_data = on_tick_data 
-api.squote.on_base_data = on_base_data 
-api.squote.on_tick_data_open_close = on_tick_data_open_close 
-subok,msg=api.squote.sub_stock('2330')
-print(f'註冊結果 {subok} {msg}')
-display(fig_match)
-display(fig_bs5)
-display(fig_base)
-display(fig_open)  
+    print(tickdataopen)
+    #TickDataOpenClose(
+    # stock_code='2330',\\股票代號
+    # open_price=1045.0,\開盤價格
+    # high_price=1045.0,\\最高成交價格
+    # low_price=1030.0,\\最低成交價格
+    # last_trade_price=1035.0,\\最近成交價
+    # cumulative_volume=23904,\\累計成交量
+    # time='999999999999'\\時間
+    #))
 ```
-
-<div class="markdown-google-sans">
-
-<strong>反註冊</strong>
-
-</div>
-
-
+### 反註冊 
+squote.[unsub_stock]({{ "/API/squote#unsub_stock" | relative_url }})方法可以反註冊停止接收即時行情.基本資料.開收盤資訊,傳入股票代碼  
 ```python
-unsub_ok,msg=api.squote.unsub_stock('2330')
+unsub_ok,msg=unitrade.squote.unsub_stock('2330')
 print(f'反註冊結果  {unsub_ok} {msg}')
 ```
 
-<div class="markdown-google-sans">
-
-<strong>*otc行情*</strong>
-</div>
-
-<div class="markdown-google-sans">
-
-<strong>*註冊*</strong>
-</div>
-
-
+## otc行情
+### 註冊 
+squote.[on_otc_tick_data]({{ "/API/squote#on_otc_tick_data" | relative_url }})事件接收即時行情  
+squote.[on_otc_base_data]({{ "/API/squote#on_otc_base_data" | relative_url }})事件接收基本資料  
+squote.[on_otc_tick_data_open_close]({{ "/API/squote#on_otc_tick_data_open_close" | relative_url }})事件接收開收盤資訊  
+squote.[sub_otc]({{ "/API/squote#sub_otc" | relative_url }})方法可以註冊接收即時行情.基本資料.開收盤資訊,傳入上櫃股票代碼  
+```python
+#訂閱接收事件
+unitrade.squote.on_otc_tick_data = on_otc_tick_data
+unitrade.squote.on_otc_base_data = on_otc_base_data 
+unitrade.squote.on_otc_tick_data_open_close = on_otc_tick_data_open_close 
+subok,msg=unitrade.squote.sub_otc('5483')
+print(f'註冊結果 {subok} {msg}') 
+```
 ```python
 def on_otc_tick_data(tickdatatrade: TickData):  
-    if tickdatatrade.trade_volume>0 :
-        cur = list(fig_match.data[0].cells.values)
-        cur[col_match['漲跌停註記']] = tickdatatrade.limit_up_down_note
-        cur[col_match['狀態註記']] = tickdatatrade.status_note        
-        cur[col_match['成交時間']] = tickdatatrade.match_time
-        cur[col_match['成交價']] = tickdatatrade.trade_price
-        cur[col_match['成交量']] = tickdatatrade.trade_volume
-        
-        with fig_match.batch_update():
-            fig_match.data[0].cells.values = cur  
-    if tickdatatrade.best_bid_volume_1>0 :
-        cur = list(fig_bs5.data[0].cells.values)
-        cur[col_bs5['買價1']] = tickdatatrade.best_bid_price_1
-        cur[col_bs5['買量1']] = tickdatatrade.best_bid_volume_1
-        cur[col_bs5['買價2']] = tickdatatrade.best_bid_price_2
-        cur[col_bs5['買量2']] = tickdatatrade.best_bid_volume_2
-        cur[col_bs5['買價3']] = tickdatatrade.best_bid_price_3
-        cur[col_bs5['買量3']] = tickdatatrade.best_bid_volume_3
-        cur[col_bs5['買價4']] = tickdatatrade.best_bid_price_4
-        cur[col_bs5['買量4']] = tickdatatrade.best_bid_volume_4
-        cur[col_bs5['買價5']] = tickdatatrade.best_bid_price_5
-        cur[col_bs5['買量5']] = tickdatatrade.best_bid_volume_5        
-
-        cur[col_bs5['賣價1']] = tickdatatrade.best_ask_price_1
-        cur[col_bs5['賣量1']] = tickdatatrade.best_ask_volume_1
-        cur[col_bs5['賣價2']] = tickdatatrade.best_ask_price_2
-        cur[col_bs5['賣量2']] = tickdatatrade.best_ask_volume_2
-        cur[col_bs5['賣價3']] = tickdatatrade.best_ask_price_3
-        cur[col_bs5['賣量3']] = tickdatatrade.best_ask_volume_3
-        cur[col_bs5['賣價4']] = tickdatatrade.best_ask_price_4
-        cur[col_bs5['賣量4']] = tickdatatrade.best_ask_volume_4
-        cur[col_bs5['賣價5']] = tickdatatrade.best_ask_price_5
-        cur[col_bs5['賣量5']] = tickdatatrade.best_ask_volume_5       
-        with fig_bs5.batch_update():
-            fig_bs5.data[0].cells.values = cur    
-
-def on_otc_base_data(basedata: OTCBaseData):         
-    cur = list(fig_base.data[0].cells.values) 
-   
-    cur[col_base['股票代號']] = tickdatahighlow.stock_code
-    cur[col_base['商品名稱']] = tickdatahighlow.product_name
-    cur[col_base['產業別']] = tickdatahighlow.industry
-    cur[col_base['證券別']] = tickdatahighlow.security_type
-    cur[col_base['股票異常代碼']] = tickdatahighlow.stock_abnormal_code
-    cur[col_base['參考價']] = tickdatahighlow.reference_price
-    cur[col_base['漲停價']] = tickdatahighlow.upper_limit_price
-    cur[col_base['跌停價']] = tickdatahighlow.lower_limit_price
-    cur[col_base['非10元面額']] = tickdatahighlow.non_10_denomination
-    cur[col_base['異常推介個股註記']] = tickdatahighlow.abnormal_recommendation_note
-    cur[col_base['特殊異常證券註記']] = tickdatahighlow.special_abnormal_security_note
-    cur[col_base['可現股當沖註記']] = tickdatahighlow.day_trading_note
-    cur[col_base['豁免平盤下融券賣出註記']] = tickdatahighlow.exempt_short_selling_note
-    cur[col_base['豁免平盤下借券賣出註記']] = tickdatahighlow.exempt_borrowing_short_selling_note
-    cur[col_base['搓合循環秒數']] = tickdatahighlow.matching_cycle_seconds
-    cur[col_base['外國股票識別碼']] = tickdatahighlow.foreign_stock_identifier
-    cur[col_base['交易單位']] = tickdatahighlow.trading_unit
-    cur[col_base['交易幣別代號']] = tickdatahighlow.trading_currency_code 
-
-    with fig_base.batch_update():
-        fig_base.data[0].cells.values = cur
+    print(tickdatatrade)
+    #TickData(
+    # stock_code='5483',\\股票代號
+    # match_time='133000000000',\\撮合時間
+    # limit_up_down_note='0',\\漲跌停註記 str (0: 一般 64:跌停成交 128:漲停成交)
+    # status_note='4',\\狀態註記 str(4:收盤揭示 8:開盤揭示 16:逐筆撮合 32:延後收盤 64:延後開盤 128:試撮揭示 256:集合競價 512:一般揭示)
+    # cumulative_volume=4174,\\累計成交數量
+    # trade_price=91.2,\\成交價
+    # trade_volume=359,\\成交量
+    # best_bid_price_1=91.2,\\最佳一檔買進價
+    # best_bid_volume_1=35,\\最佳一檔買進量
+    # best_bid_price_2=91.1,\\最佳二檔買進價
+    # best_bid_volume_2=54,\\最佳二檔買進量 
+    # best_bid_price_3=91.0,\\最佳三檔買進價
+    # best_bid_volume_3=178,\\最佳三檔買進量
+    # best_bid_price_4=90.9,\\最佳四檔買進價
+    # best_bid_volume_4=33,\\最佳四檔買進量
+    # best_bid_price_5=90.8,\\最佳五檔買進價
+    # best_bid_volume_5=34,\\最佳五檔買進量
+    # best_ask_price_1=91.3,\\最佳一檔賣出價
+    # best_ask_volume_1=7,\\最佳一檔賣出量
+    # best_ask_price_2=91.5,\\最佳二檔賣出價
+    # best_ask_volume_2=5,\\最佳二檔賣出量
+    # best_ask_price_3=91.6,\\最佳三檔賣出價
+    # best_ask_volume_3=2,\\最佳三檔賣出量
+    # best_ask_price_4=91.7,\\最佳四檔賣出價
+    # best_ask_volume_4=21,\\最佳四檔賣出量
+    # best_ask_price_5=91.8,\\最佳五檔賣出價 
+    # best_ask_volume_5=13\\最佳五檔賣出量
+    #))      
+def on_otc_base_data(basedata: OTCBaseData):      
+    print(basedata)   
+    # OTCBaseData(
+    # stock_code='5483',\\股票代號 
+    # product_name='中美晶          ',\\商品名稱
+    # industry='24',\\產業別
+    # security_type='  ',\\證券別
+    # stock_abnormal_code='0',\\股票異常代碼
+    # stock_type='48',\\類股註記
+    # reference_price='94.2000',\\參考價 
+    # upper_limit_price='103.5000',\\漲停價 
+    # lower_limit_price='84.8000',\\跌停價 
+    # non_10_denomination=' ',\\非10元面額
+    # abnormal_recommendation_note=' ',\\異常推介個股註記
+    # special_abnormal_security_note=' ',\\特殊異常證券註記
+    # day_trading_note='A',\\可現股當沖註記
+    # exempt_short_selling_note='Y',\\豁免平盤下融券賣出註記
+    # exempt_borrowing_short_selling_note='Y',\\豁免平盤下借券賣出註記 
+    # matching_cycle_seconds='0',\\撮合循環秒數
+    # trading_unit='1000',\\交易單位
+    # trading_currency_code='   '\\交易幣別代號
+    #))
     
 def on_otc_tick_data_open_close(tickdataopen: TickDataOpenClose):
-    cur = list(fig_open.data[0].cells.values) 
-    cur[col_open['開盤價格']] = tickdataopen.open_price 
-    cur[col_open['最高成交價格']] = tickdataopen.high_price
-    cur[col_open['最低成交價格']] = tickdataopen.low_price
-    cur[col_open['最近成交價']] = tickdataopen.last_trade_price
-    cur[col_open['累計成交量']] = tickdataopen.cumulative_volume
-    cur[col_open['時間']] = tickdataopen.time  
-    with fig_open.batch_update():
-        fig_open.data[0].cells.values = cur
-      
-#訂閱接收事件
-api.squote.on_otc_tick_data = on_otc_tick_data
-api.squote.on_otc_base_data = on_otc_base_data 
-api.squote.on_otc_tick_data_open_close = on_otc_tick_data_open_close 
-subok,msg=api.squote.sub_otc('5483')
-print(f'註冊結果 {subok} {msg}')
-display(fig_match)
-display(fig_bs5)
-display(fig_base)
-display(fig_open)  
-```
-
-<div class="markdown-google-sans">
-
-<strong>反註冊</strong>
-
-</div>
-
-
+    print(tickdataopen)
+    #TickDataOpenClose(
+    # stock_code='5483',//股票代號
+    # open_price=93.8,//開盤價格
+    # high_price=94.2,//最高成交價格
+    # low_price=91.2,//最低成交價格
+    # last_trade_price=91.2,//最近成交價
+    # cumulative_volume=4174,//累計成交量
+    # time='999999999999'//時間 
+    #))
+```      
+### 反註冊 
+squote.[unsub_otc]({{ "/API/squote#unsub_otc" | relative_url }})方法可以反註冊停止接收即時行情.基本資料.開收盤資訊,傳入上櫃股票代碼  
 ```python
-unsub_ok,msg=api.squote.unsub_otc('5483')
+unsub_ok,msg=unitrade.squote.unsub_otc('5483')
 print(f'反註冊結果  {unsub_ok} {msg}')
 ```
-
-<div class="markdown-google-sans">
-
-<strong>*指數行情*</strong>
-</div>
-
-<div class="markdown-google-sans">
-
-<strong>*指數行情*</strong>
-</div>
-
-<div class="markdown-google-sans">
-
- <strong>*註冊*</strong>
-</div>臺股指數 IX0001  臺灣50指數 TW50  臺灣中型100指數 TWMC  臺灣資訊科技指數 TWIT  臺灣發達指數 TWEI  臺灣高股息指數 TWDP  臺灣就業99指數 EMP99  臺灣公司治理100指數 CG100  寶島股價指數 FRMSA  臺灣高薪100指數 HC100  電子類兩倍槓桿指數 EDRL2  電子類反向指數 EDRIN  臺指日報酬兩倍指數 TTDRL2  臺指反向一倍指數 TTDRIN  小型股300指數 SC300  金融類日報酬兩倍指數 FDRL2  金融類日報酬反向一倍指數 FDRIN  漲升股利150指數 DVA150  漲升股利100指數 DVA100  藍籌30指數 BC30  工業菁英30指數 INE30  電子菁英30指數 ITE30  低波動精選30指數 LV30  低貝塔100指數 LB100  藍籌30反向一倍指數 BC30-1  中小型精選50指數 SMC50  中小型A級動能50指數 SAM50  臺灣永續指數 F4GTTE  股利150報酬指數 IR0091  電子菁英30報酬指數 IR0095  存股雙十等權重報酬指數 IR0112  特選大蘋果報酬指數 IR0113  中小型300報酬指數 IR0114  特股高息20報酬指數 IR0115  臺灣500報酬指數 IR0116  特選外資豐擁50報酬指數 IR0117  臺灣生技指數 IX0103  特選高息低波指數 IX0104  工業菁英30反向一倍指數 IX0106  特選內需高收益指數 IX0107  臺灣中小型公司治理指數 IX0108  臺灣IPO指數 IX0109  價值投資指數 IX0110  中小型300指數 IX0114 |
+ 
+## 指數行情 
+### 註冊 
+squote.[on_index_data]({{ "/API/squote#on_index_data" | relative_url }})事件接收即時行情   
+squote.[sub_index]({{ "/API/squote#sub_index" | relative_url }})方法可以註冊接收指數行情,傳入[指數代碼]({{ "/說明/現貨指數代碼/" | relative_url }})  
 
 
+ 
+```python
+#訂閱接收事件
+unitrade.squote.on_index_data = on_index_data 
+subok,msg=unitrade.squote.sub_index('IX0001')
+print(f'註冊結果 {subok} {msg}') 
+```
 ```python
 def on_index_data(indexdata: IndexData):  
-    cur = list(fig_idx.data[0].cells.values)  
-    cur[col_idx['指數代號']] = indexdata.index_code 
-    cur[col_idx['指數時間']] = indexdata.index_time 
-    cur[col_idx['最新指數']] = indexdata.latest_index 
-    with fig_idx.batch_update():
-        fig_idx.data[0].cells.values = cur 
- 
-
-#訂閱接收事件
-api.squote.on_index_data = on_index_data 
-subok,msg=api.squote.sub_index('IX0001')
-print(f'註冊結果 {subok} {msg}')
-display(fig_idx) 
-```
-
-<div class="markdown-google-sans">
-
-<strong>反註冊</strong>
-
-</div>
-
-
+    print(indexdata)
+    #IndexData(
+    # index_code='IX0001',\\指數代號
+    # index_time='999999',\\指數時間
+    # latest_index=22003.5\\最新指數
+    #))
+```    
+### 反註冊　
+squote.[unsub_index]({{ "/API/squote#unsub_index" | relative_url }})方法可以反註冊停止接收指數行情,傳入[指數代碼]({{ "/說明/現貨指數代碼/" | relative_url }})    
 ```python
-unsub_ok,msg=api.squote.unsub_index('IX0001')
+unsub_ok,msg=unitrade.squote.unsub_index('IX0001')
 print(f'反註冊結果  {unsub_ok} {msg}')
-```
-
-<div class="markdown-google-sans">
-
-<strong>*OTC指數行情*</strong>
-</div>
-
-<div class="markdown-google-sans">
-
-<strong>*註冊*</strong>
-</div>
-櫃買指數:IX0043  富櫃五十指數:GTSM50  指標公債指數:TWTBI  線上遊戲業指數:GAME  高殖利率指數:GTHD  勞工就業88指數:EMP88  櫃買薪酬指數:GTCI  櫃買公司治理指數:TPCGI  富櫃200報酬指數:IR0118  臺灣生技指數:IX0103  臺灣中小型公司治理指數:IX0108  臺灣IPO指數:IX0109  富櫃200指數:IX0118  
-
+``` 
+## OTC指數行情 
+### 註冊
+squote.[on_otc_index_data]({{ "/API/squote#on_otc_index_data" | relative_url }})事件接收即時行情   
+squote.[sub_otc_index]({{ "/API/squote#sub_otc_index" | relative_url }})方法可以註冊接收指數行情,傳入[OTC指數代碼]({{ "/說明/櫃買指數代碼/" | relative_url }})
 
 ```python
-def on_otc_index_data(indexdata: IndexData):  
-    cur = list(fig_idx.data[0].cells.values)  
-    cur[col_idx['指數代號']] = indexdata.index_code 
-    cur[col_idx['指數時間']] = indexdata.index_time 
-    cur[col_idx['最新指數']] = indexdata.latest_index 
-    with fig_idx.batch_update():
-        fig_idx.data[0].cells.values = cur 
- 
-
 #訂閱接收事件
-api.squote.on_otc_index_data = on_otc_index_data 
-subok,msg=api.squote.sub_otc_index('IX0043')
+unitrade.squote.on_otc_index_data = on_otc_index_data 
+subok,msg=unitrade.squote.sub_otc_index('IX0043')
 print(f'註冊結果 {subok} {msg}')
 display(fig_idx) 
 ```
-
-<div class="markdown-google-sans">
-
- <strong>反註冊</strong>
-
-</div>
-
-
 ```python
-unsub_ok,msg=api.squote.unsub_index('IX0043')
+def on_otc_index_data(indexdata: IndexData):
+    print(indexdata)  
+    #IndexData(
+    # index_code='IX0043',\\指數代號
+    # index_time='999999',\\指數時間
+    # latest_index=228.56\\最新指數
+    #))
+```    
+### 反註冊 
+squote.[unsub_otc_index]({{ "/API/squote#unsub_otc_index" | relative_url }})方法可以反註冊停止接收指數行情,傳入[OTC指數代碼]({{ "/說明/櫃買指數代碼/" | relative_url }}) 
+```python
+unsub_ok,msg=unitrade.squote.unsub_otc_index('IX0043')
 print(f'反註冊結果  {unsub_ok} {msg}')
 ```
  
