--- a/常見問題/登入失敗.md
+++ b/常見問題/登入失敗.md
@@ -5,3 +5,67 @@ nav_order: 0
 parent: 常見問題
 permalink: /常見問題/登入失敗/
 --- 
+
+# 執行錯誤
+## 執行階段產生錯誤
+
+### No module named 'unitrade'
+
+> 尚未安裝unitrade,請先安裝
+
+``` python
+!pip install unitrade
+```
+
+###  name 'api' is not defined
+> 尚未初始化unitrade,請先執行以下語法初始化
+
+``` python
+import unitrade 
+api = Unitrade()
+```
+
+# 系統回覆訊息
+## 執行login 回覆錯誤
+操作login,回傳LoginResponse-error帶出錯誤訊息
+### 無效的URL，必須以http://或https://開頭')
+
+> 請檢查url是否正確,或者帶入不完整
+``` python
+loginresponse = api.login(
+    "url", "帳號", "密碼", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼 
+```
+
+### Connection aborted.', ConnectionResetError(104, 'Connection reset by peer'))")
+
+> 無法連結主機,請確認網路狀況
+
+### 服務中台發生錯誤-994-[AG000005][001][007]查無資料"}')
+
+> 登入帳號不存在,請先確認好帶入帳號是否為分公司4碼+交易帳號,例如:80001234567
+
+### 服務中台發生錯誤-994-[SP000101][001]輸入資料錯誤，請洽客服中心(02)8172-4668"}')
+
+> 密碼錯誤,請確認登入的密碼是否有帶正確
+
+### 登入簽驗檢查:憑證有誤!請檢查憑證! 簽章發生錯誤無法在MS CryptoAPI Database 中找到 指定憑證! 5010')
+
+> 憑證檔案找不到,請先確認程式執行目錄下有這個憑證檔案
+> 程式執行目錄下。您的目錄要有您指定憑證檔案：
+
+```
+ ├── 您的程式.py
+ └── XXXXXXXXXX.pfx
+```
+> 如果憑證檔案沒有問題,可能是憑證密碼輸入錯誤,請確認帶入憑證密碼正確性
+
+### 登入簽驗檢查:憑證有誤!請檢查憑證! 憑證資訊不正確
+
+> 帶入憑證檔案並非此登入帳號,請確認憑證檔案
+
+### 已經登入
+
+> 已經登入系統,如要重新登入請先操作登出
+``` python
+api.logout()
+```
