--- a/教學/商品查詢.md
+++ b/教學/商品查詢.md
@@ -19,187 +19,164 @@ https://colab.research.google.com/github/PFCEC/unitrade/blob/main/%E6%95%99%E5%A
 
 ## 內期商品查詢
 
-透過[get_domestic_products]({{ "/API/pfcf#get_domestic_products" | relative_url }}) 查詢內期商品
-
-回傳結果是[DomesticProduct]({{ "/API/dtrade#domesticproduct.DomesticProduct" | relative_url }}) 陣列
+透過[get_domestic_products]({{ "/API/unitrade/#get_domestic_products" | relative_url }}) 查詢內期商品
+ 
 
 程式碼範例如下
 
 ```python
-# 內期商品取得範例
-# 初始數據
-data = [['', '', '', '', '']]
-dd = pd.DataFrame(data)
-dd.columns = ['商品代號', '商品名稱', '股票代碼', '類別', '合約基數']
-domestic_products = api.get_domestic_products()
-i = 0
-for key, value in domestic_products.items():
-    print(data)
-    dd.loc[i, '商品代號'] = value.kind_id
-    dd.loc[i, '商品名稱'] = value.name
-    dd.loc[i, '股票代碼'] = value.stock_id
-    dd.loc[i, '類別'] = value.subtype
-    dd.loc[i, '合約基數'] = value.contract_size
-    i = i+1
-clear_output(wait=True)
-display(dd)
+# 內期商品取得範例 
+domestic_products = unitrade.get_domestic_products()
+# 回傳範例: 
+#{'TXF':DomesticProduct(
+#   kinid='TXF',
+#   name='臺指',
+#   stock_id='',
+#   subtype='I',
+#   contract_size=200,
+#   strike_price_decimal_locator=0), 
+#  ......
+# } 
 
-```
-
-
-
+``` 
 ## 內期商品期貨合約查詢 
-透過[get_domestic_contracts]({{ "/API/pfcf#get_domestic_contracts" | relative_url }}) 查詢內期商品
+透過[get_domestic_contracts]({{ "/API/unitrade/#get_domestic_contracts" | relative_url }}) 查詢內期商品
 
 傳入類別碼請參考[內期商品類別]({{ "/說明/內期商品類別" | relative_url }}) 
+ 
 
-回傳結果是[DomesticProduct]({{ "/API/product#domesticcontract.DomesticContract" | relative_url }}) 陣列
-
-程式碼範例如下
-
-
-```python
-data = [['','','','','','','']]
-dd = pd.DataFrame(data)
-dd.columns = ['商品代號','年月','CP','履約價','漲停價','跌停價','參考價']
-query_response = api.get_domestic_contracts("TXF","F")#商品類別碼
-if query_response.ok == True:
-    i=0
-    for data in query_response.data:   
-        dd.loc[i,'商品代號']=data.prod_id
-        dd.loc[i,'年月']=data.month
-        dd.loc[i,'CP']=data.cp
-        dd.loc[i,'履約價']=data.stikeprice
-        dd.loc[i,'漲停價']=data.maxprice
-        dd.loc[i,'跌停價']=data.minprice
-        dd.loc[i,'參考價']=data.premium 
-        i=i+1 
-    clear_output(wait=True)
-    display(dd)
-else:
-    print(query_response.error)
-
+程式碼範例如下 
+```python 
+query_response = unitrade.get_domestic_contracts("TXF","F")#商品類別碼
+#回傳範例:
+#DomesticContractResponse(ok=True, error='', data=[
+# DomesticContract(
+#  prod_id='TXFG5',
+#  month='202507',
+#  cp=None,
+#  stikeprice=0,
+#  maxprice=23815,
+#  minprice=19485,
+#  premium=21650),  
+# ......
+#])
 ```
 ## 內期商品選擇權合約查詢
-透過[get_domestic_contracts]({{ "/API/pfcf#get_domestic_contracts" | relative_url }}) 查詢內期商品
+透過[get_domestic_contracts]({{ "/API/unitrade#get_domestic_contracts" | relative_url }}) 查詢內期商品
 
 傳入類別碼請參考[內期商品類別]({{ "/說明/內期商品類別" | relative_url }}) 
-
-回傳結果是[DomesticProduct]({{ "/API/product#domesticcontract.DomesticContract" | relative_url }}) 陣列
+ 
 
 程式碼範例如下
 
 
 ```python
-# 內期選擇權合約取得範例  
-# 初始數據
-data = [['','','','','','','']]
-dd = pd.DataFrame(data)
-dd.columns = ['商品代號','年月','CP','履約價','漲停價','跌停價','參考價']
-query_response = api.get_domestic_contracts("TXO","O")#商品類別碼
-if query_response.ok == True:
-    i=0
-    for data in query_response.data:   
-        dd.loc[i,'商品代號']=data.prod_id
-        dd.loc[i,'年月']=data.month
-        dd.loc[i,'CP']=data.cp
-        dd.loc[i,'履約價']=data.stikeprice
-        dd.loc[i,'漲停價']=data.maxprice
-        dd.loc[i,'跌停價']=data.minprice
-        dd.loc[i,'參考價']=data.premium 
-        i=i+1 
-    clear_output(wait=True)
-    display(dd)
-else:
-    print(query_response.error)
-
+# 內期選擇權合約取得範例   
+query_response = unitrade.get_domestic_contracts("TXO","O")#商品類別碼
+#回傳範例:
+#DomesticContractResponse(ok=True, error='', data=[
+# DomesticContract(
+#  prod_id='TXO15900G5',
+#  month='202507',
+#  cp='C',
+#  stikeprice=15900,
+#  maxprice=7970,
+#  minprice=3570,
+#  premium=5770),
+# ......
+#]) 
 ```
 ## 外期交易所查詢
-透過[get_exchanges]({{ "/API/pfcf#get_exchanges" | relative_url }}) 查詢外期交易所
-
-回傳結果是[EXCHANGE]({{ "/API/product#exchange.EXCHANGE" | relative_url }}) 陣列
+透過[get_exchanges]({{ "/API/unitrade/#get_exchanges" | relative_url }}) 查詢外期交易所
+ 
 
 程式碼範例如下
 
 ```python
-# 外期交易所取得範例
-# 初始數據
-data = [['', '', '', '']]
-dd = pd.DataFrame(data)
-dd.columns = ['交易所', '中文名稱', '區域', '幣別']
-exchanges = api.get_exchanges()
-i = 0
-for key, value in exchanges.items():
-    print(data)
-    dd.loc[i, '交易所'] = value.exchange
-    dd.loc[i, '中文名稱'] = value.name
-    dd.loc[i, '區域'] = value.country
-    dd.loc[i, '幣別'] = value.currency 
-    i = i+1
-clear_output(wait=True)
-display(dd) 
+# 外期交易所取得範例 
+exchanges = unitrade.get_exchanges()
+#回傳範例:
+# {'CME': EXCHANGE(
+# exchange='CME',
+# name='芝加哥商品交易所',
+# country='USA',
+# currency='USD',
+# shortname='CME') ,
+#  ...... } 
 ```
 
 ## 外期商品查詢
-透過[get_foreign_products]({{ "/API/pfcf#get_exchanges" | relative_url }}) 查詢外期商品
-
-回傳結果是[ForeignProduct]({{ "/API/product#foreignproduct.ForeignProduct" | relative_url }}) 陣列
+透過[get_foreign_products]({{ "/API/unitrade#get_foreign_products" | relative_url }}) 查詢外期商品
+ 
 
 程式碼範例如下
 
 ```python
-# 外期商品取得範例
-# 初始數據
-data = [['', '', '', '', '', '', '']]
-dd = pd.DataFrame(data)
-dd.columns = ['交易所', '商品代碼', '類型(期貨:F 選擇權:O)','中文名稱','中文簡稱','區域', '幣別']
-foreign_products = api.get_foreign_products()
-i = 0
-for key, value in foreign_products.items():
-    print(data)
-    dd.loc[i, '交易所'] = value.exchange
-    dd.loc[i, '商品代碼'] = value.symbol
-    dd.loc[i, '類型(期貨:F 選擇權:O)'] = value.type
-    dd.loc[i, '中文名稱'] = value.name 
-    dd.loc[i, '中文簡稱'] = value.shortname 
-    dd.loc[i, '區域'] = value.country 
-    dd.loc[i, '幣別'] = value.currency 
-    i = i+1
-clear_output(wait=True)
-display(dd)  
+# 外期商品取得範例 
+foreign_products = unitrade.get_foreign_products()
+#回傳範例:
+# {'CBT|10Y':ForeignProduct(
+# exchange='CBT',
+# symbol='10Y',
+# type='F',
+# name='微型 10 年收益率期貨',
+# shortname='微型十年收益',
+# country='USA',
+# currency='USD'), 
+#  ...... } 
 ```
 
 ## 外期商品合約查詢
-透過[get_foreign_contracts]({{ "/API/pfcf#get_foreign_contracts" | relative_url }}) 查詢外期商品合約
+透過[get_foreign_contracts]({{ "/API/unitrade#get_foreign_contracts" | relative_url }}) 查詢外期商品合約
 
 傳入商品代碼請參考[外期商品]({{ "/說明/外期商品" | relative_url }}) 
-
-回傳結果是[ForeignContract]({{ "/API/product#foreigncontract.ForeignContract" | relative_url }}) 陣列
+ 
 
 程式碼範例如下
 
 ```python
-# 外期商品取得範例
-# 初始數據
-data = [['', '', '', '', '', '', '']]
-dd = pd.DataFrame(data) 
-dd.columns = ['交易所', '商品代碼', '類型(期貨:F 選擇權:O)','年月','履約價','call put', '最後交易日'] 
-query_response =api.get_foreign_contracts("CME","NQ","F")#交易所代碼,商品代碼,F:期貨O:選擇權
-if query_response.ok == True:
-    i=0
-    for data in query_response.data:   
-        dd.loc[i, '交易所'] = data.exchange
-        dd.loc[i, '商品代碼'] = data.symbol
-        dd.loc[i, '類型(期貨:F 選擇權:O)'] = data.type
-        dd.loc[i, '年月'] = data.monthyear 
-        dd.loc[i, '履約價'] = data.strikeprice 
-        dd.loc[i, 'call put'] = data.cp 
-        dd.loc[i, '最後交易日'] = data.lasttradedate 
-        i=i+1 
-    clear_output(wait=True)
-    display(dd)
-else:
-    print(query_response.error)
+# 期貨合約取得範例  
+response = unitrade.get_foreign_contracts("CME", "NQ", "F")
+#回傳範例:
+# ForeignContractResponse(ok=True, error='', data=[
+#  ForeignContract(
+# exchange='CME',
+# symbol='NQ',
+# type='F',
+# monthyear='202506',
+# strikeprice='0.0000000',
+# cp='',
+# lasttradedate='20250620'),
+#  ForeignContract(
+# exchange='CME',
+# symbol='NQ',
+# type='F',
+# monthyear='202509',
+# strikeprice='0.0000000',
+# cp='',
+# lasttradedate='20250919'),
+#  ...... )
+# 選擇權合約取得範例 
+response = unitrade.get_foreign_contracts("CME", "ADO", "O")
+#回傳範例:
+# ForeignContractResponse(ok=True, error='', data=[
+#  ForeignContract(
+# exchange='CME',
+# symbol='ADO',
+# type='O',
+# monthyear='202507',
+# strikeprice='1600.0000000',
+# cp='C',
+# lasttradedate='20250703'),
+#  ForeignContract(
+# exchange='CME',
+# symbol='ADO',
+# type='O',
+# monthyear='202507',
+# strikeprice='1600.0000000',
+# cp='P',
+# lasttradedate='20250703'),
+#  ...... )
 ```
 
  
