--- a/教學/連線狀態.md
+++ b/教學/連線狀態.md
@@ -31,52 +31,52 @@ api = Unitrade()
 
 ```python
 def api_dquote_on_connected():
-    serverip,port =api.dquote.get_current_server()
+    serverip,port =unitrade.dquote.get_current_server()
     dd.loc[0, '內期報價連線'] =f"{serverip} {port} 已連線"
 def api_fquote_on_connected():
-    serverip,port =api.fquote.get_current_server()
+    serverip,port =unitrade.fquote.get_current_server()
     dd.loc[0, '外期報價連線'] =f"{serverip} {port} 已連線"
 def api_dtrade_on_connected():
-    serverip,port =api.dtrade.get_current_server()
+    serverip,port =unitrade.dtrade.get_current_server()
     dd.loc[0, '內期交易連線'] =f"{serverip} {port} 已連線"
 def api_ftrade_on_connected():
-    serverip,port =api.ftrade.get_current_server()
+    serverip,port =unitrade.ftrade.get_current_server()
     dd.loc[0, '外期交易連線'] =f"{serverip} {port} 已連線"
 def api_daccount_on_connected():
-    url =api.daccount.get_current_server()
+    url =unitrade.daccount.get_current_server()
     dd.loc[0, '內期帳務連線'] =f"{url} 已連線"
 def api_faccount_on_connected():
-    url =api.faccount.get_current_server()
+    url =unitrade.faccount.get_current_server()
     dd.loc[0, '外期帳務連線'] =f"{url} 已連線"
 def api_dquote_on_disonnected():
-    serverip,port =api.dquote.get_current_server()
+    serverip,port =unitrade.dquote.get_current_server()
     dd.loc[0, '內期報價連線'] =f"{serverip} {port} 斷線"
 def api_fquote_on_disonnected():
-    serverip,port =api.fquote.get_current_server()
+    serverip,port =unitrade.fquote.get_current_server()
     dd.loc[0, '外期報價連線'] =f"{serverip} {port} 斷線"
 def api_dtrade_on_disonnected():
-    serverip,port =api.dtrade.get_current_server()
+    serverip,port =unitrade.dtrade.get_current_server()
     dd.loc[0, '內期交易連線'] =f"{serverip} {port} 斷線"
 def api_ftrade_on_disonnected():
-    serverip,port =api.ftrade.get_current_server()
+    serverip,port =unitrade.ftrade.get_current_server()
     dd.loc[0, '外期交易連線'] =f"{serverip} {port} 斷線"
 def api_daccount_on_disonnected():
-    url =api.daccount.get_current_server()
+    url =unitrade.daccount.get_current_server()
     dd.loc[0, '外期交易連線'] =f"{url} 斷線"
 def api_faccount_on_disonnected():
-    url =api.daccount.get_current_server()
+    url =unitrade.daccount.get_current_server()
     dd.loc[0, '外期帳務連線'] =f"{url} 斷線"
-api.dquote.on_connected=api_dquote_on_connected
-api.fquote.on_connected=api_fquote_on_connected
-api.dtrade.on_connected=api_dtrade_on_connected
-api.ftrade.on_connected=api_ftrade_on_connected
-api.daccount.on_connected=api_daccount_on_connected
-api.faccount.on_connected=api_faccount_on_connected
-api.dquote.on_disonnected=api_dquote_on_disonnected
-api.fquote.on_disonnected=api_fquote_on_disonnected
-api.dtrade.on_disonnected=api_dtrade_on_disonnected
-api.ftrade.on_disonnected=api_ftrade_on_disonnected
-api.daccount.on_disonnected=api_daccount_on_disonnected
+unitrade.dquote.on_connected=api_dquote_on_connected
+unitrade.fquote.on_connected=api_fquote_on_connected
+unitrade.dtrade.on_connected=api_dtrade_on_connected
+unitrade.ftrade.on_connected=api_ftrade_on_connected
+unitrade.daccount.on_connected=api_daccount_on_connected
+unitrade.faccount.on_connected=api_faccount_on_connected
+unitrade.dquote.on_disonnected=api_dquote_on_disonnected
+unitrade.fquote.on_disonnected=api_fquote_on_disonnected
+unitrade.dtrade.on_disonnected=api_dtrade_on_disonnected
+unitrade.ftrade.on_disonnected=api_ftrade_on_disonnected
+unitrade.daccount.on_disonnected=api_daccount_on_disonnected
 ```
 
 <div class="markdown-google-sans">
@@ -88,14 +88,14 @@ api.daccount.on_disonnected=api_daccount_on_disonnected
 
 ```python
 #錯誤事件處理
-api.on_error = lambda error: print(f'api錯誤 {error}')
+unitrade.on_error = lambda error: print(f'api錯誤 {error}')
 #系統登入
-loginresponse = api.login(
+loginresponse = unitrade.login(
     "url", "帳號", "密碼", '憑證檔名', '憑證密碼')#url,帳號,密碼,憑證檔名,憑證密碼
-actno = api.get_accounts()[0]#取得第一個交易帳號
+actno = unitrade.get_accounts()[0]#取得第一個交易帳號
 #顯示登入結果
 print(loginresponse)
-print(f"登入旗標{api.login_status_flag}")
+print(f"登入旗標{unitrade.login_status_flag}")
 print(f"交易帳號{actno}")
 time.sleep(5)
 ```
@@ -107,7 +107,7 @@ time.sleep(5)
 
 
 ```python
-print(api.dquote.get_server_list())
+print(unitrade.dquote.get_server_list())
 ```
 
 <div class="markdown-google-sans">
@@ -118,7 +118,7 @@ print(api.dquote.get_server_list())
 
 
 ```python
-api.dquote.set_sever_by_name("217")
+unitrade.dquote.set_sever_by_name("217")
 display(dd)
 time.sleep(5)
 ```
@@ -130,7 +130,7 @@ time.sleep(5)
 
 
 ```python
-print(api.fquote.get_server_list())
+print(unitrade.fquote.get_server_list())
 ```
 
 <div class="markdown-google-sans">
@@ -141,7 +141,7 @@ print(api.fquote.get_server_list())
 
 
 ```python
-api.fquote.set_sever_by_name("217")
+unitrade.fquote.set_sever_by_name("217")
 display(dd)
 time.sleep(5)
 ```
@@ -153,7 +153,7 @@ time.sleep(5)
 
 
 ```python
-print(api.dtrade.get_server_list())
+print(unitrade.dtrade.get_server_list())
 ```
 
 <div class="markdown-google-sans">
@@ -164,7 +164,7 @@ print(api.dtrade.get_server_list())
 
 
 ```python
-api.dtrade.set_sever_by_name("99167")
+unitrade.dtrade.set_sever_by_name("99167")
 display(dd)
 time.sleep(5)
 ```
@@ -176,7 +176,7 @@ time.sleep(5)
 
 
 ```python
-print(api.ftrade.get_server_list())
+print(unitrade.ftrade.get_server_list())
 ```
 
 <div class="markdown-google-sans">
@@ -187,7 +187,7 @@ print(api.ftrade.get_server_list())
 
 
 ```python
-api.ftrade.set_sever_by_name("141")
+unitrade.ftrade.set_sever_by_name("141")
 display(dd)
 time.sleep(5)
 ```
@@ -201,8 +201,8 @@ time.sleep(5)
 
 ```python
 #系統登出
-api.logout()
+unitrade.logout()
 print('登出完畢')
-print(f"登入旗標{api.login_status_flag}")
+print(f"登入旗標{unitrade.login_status_flag}")
 
 ```
